commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.rangefill.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.rangefill.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.RangeFill:class'
     summary: |-
-      <span data-ttu-id="147f5-101">表示 range 对象的背景。</span><span class="sxs-lookup"><span data-stu-id="147f5-101">Represents the background of a range object.</span></span>
+      <span data-ttu-id="152bd-101">表示 range 对象的背景。</span><span class="sxs-lookup"><span data-stu-id="152bd-101">Represents the background of a range object.</span></span>
 
-      <span data-ttu-id="147f5-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147f5-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="152bd-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="152bd-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.RangeFill
     fullName: Excel.RangeFill
     langs:
@@ -25,9 +25,9 @@ items:
       - 'excel!Excel.RangeFill#toJSON:member(1)'
   - uid: 'excel!Excel.RangeFill#clear:member(1)'
     summary: |-
-      <span data-ttu-id="147f5-103">重置区域背景。</span><span class="sxs-lookup"><span data-stu-id="147f5-103">Resets the range background.</span></span>
+      <span data-ttu-id="152bd-103">重置区域背景。</span><span class="sxs-lookup"><span data-stu-id="152bd-103">Resets the range background.</span></span>
 
-      <span data-ttu-id="147f5-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147f5-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="152bd-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="152bd-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: clear()
     fullName: clear()
     langs:
@@ -41,7 +41,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="147f5-105">示例</span><span class="sxs-lookup"><span data-stu-id="147f5-105">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="152bd-105">示例</span><span class="sxs-lookup"><span data-stu-id="152bd-105">Examples</span></span>
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -61,9 +61,9 @@ items:
           ```
   - uid: 'excel!Excel.RangeFill#color:member'
     summary: |-
-      <span data-ttu-id="147f5-106">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="147f5-106">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+      <span data-ttu-id="152bd-106">代表表单\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="152bd-106">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
 
-      <span data-ttu-id="147f5-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147f5-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="152bd-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="152bd-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -75,7 +75,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.RangeFill#context:member'
-    summary: <span data-ttu-id="147f5-108">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="147f5-108">The request context associated with the object.</span></span> <span data-ttu-id="147f5-109">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="147f5-109">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: <span data-ttu-id="152bd-108">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="152bd-108">The request context associated with the object.</span></span> <span data-ttu-id="152bd-109">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="152bd-109">This connects the add-in's process to the Office host application's process.</span></span>
     name: context
     fullName: context
     langs:
@@ -87,33 +87,25 @@ items:
         type:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.RangeFill#load:member(1)'
-    summary: <span data-ttu-id="147f5-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="147f5-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="147f5-111">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="147f5-111">You must call "context.sync()" before reading the properties.</span></span>
-    remarks: |-
-      <span data-ttu-id="147f5-112">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="147f5-112">In addition to this signature, this method has the following signatures:</span></span>
-
-      <span data-ttu-id="147f5-113">`load(option?: string | string[]): Excel.RangeFill`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="147f5-113">`load(option?: string | string[]): Excel.RangeFill` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
-
-      <span data-ttu-id="147f5-114">`load(option?: { select?: string; expand?: string; }): Excel.RangeFill`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="147f5-114">`load(option?: { select?: string; expand?: string; }): Excel.RangeFill` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
-
-      <span data-ttu-id="147f5-115">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RangeFill`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="147f5-115">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RangeFill` - Only available on collection types.</span></span> <span data-ttu-id="147f5-116">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="147f5-116">It is similar to the preceding signature.</span></span> <span data-ttu-id="147f5-117">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="147f5-117">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="147f5-118">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="147f5-118">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="147f5-119">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="147f5-119">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
-    name: load(option)
-    fullName: load(option)
+    summary: <span data-ttu-id="152bd-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="152bd-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="152bd-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="152bd-111">You must call `context.sync()` before reading the properties.</span></span>
+    name: load(options)
+    fullName: load(options)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(option?: Excel.Interfaces.RangeFillLoadOptions): Excel.RangeFill;'
+      content: 'load(options?: Excel.Interfaces.RangeFillLoadOptions): Excel.RangeFill;'
       return:
         type:
           - 'excel!Excel.RangeFill:class'
         description: ''
       parameters:
-        - id: option
-          description: ''
+        - id: options
+          description: <span data-ttu-id="152bd-112">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="152bd-112">Provides options for which properties of the object to load.</span></span>
           type:
             - 'excel!Excel.Interfaces.RangeFillLoadOptions:interface'
   - uid: 'excel!Excel.RangeFill#load:member(2)'
-    summary: <span data-ttu-id="147f5-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="147f5-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="147f5-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="147f5-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: <span data-ttu-id="152bd-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="152bd-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="152bd-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="152bd-114">You must call `context.sync()` before reading the properties.</span></span>
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -127,7 +119,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="147f5-122">示例</span><span class="sxs-lookup"><span data-stu-id="147f5-122">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="152bd-115">示例</span><span class="sxs-lookup"><span data-stu-id="152bd-115">Examples</span></span>
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -164,31 +156,39 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="147f5-123">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="147f5-123">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: <span data-ttu-id="152bd-116">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="152bd-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.RangeFill#load:member(3)'
-    summary: <span data-ttu-id="147f5-124">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="147f5-124">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="147f5-125">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="147f5-125">You must call `context.sync()` before reading the properties.</span></span>
+    summary: <span data-ttu-id="152bd-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="152bd-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="152bd-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="152bd-118">You must call `context.sync()` before reading the properties.</span></span>
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.RangeFill;'
+      content: |-
+        load(propertyNamesAndPaths?: {
+                    select?: string;
+                    expand?: string;
+                }): Excel.RangeFill;
       return:
         type:
           - 'excel!Excel.RangeFill:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="147f5-126">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="147f5-126">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '<span data-ttu-id="152bd-119">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="152bd-119">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
           type:
-            - '{ select?: string; expand?: string; }'
+            - |-
+              {
+                          select?: string;
+                          expand?: string;
+                      }
   - uid: 'excel!Excel.RangeFill#set:member(1)'
-    summary: '<span data-ttu-id="147f5-127">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="147f5-127">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="147f5-128">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="147f5-128">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: '<span data-ttu-id="152bd-120">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="152bd-120">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="152bd-121">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="152bd-121">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
     remarks: |-
-      <span data-ttu-id="147f5-129">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="147f5-129">This method has the following additional signature:</span></span>
+      <span data-ttu-id="152bd-122">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="152bd-122">This method has the following additional signature:</span></span>
 
       `set(properties: Excel.RangeFill): void`
     name: 'set(properties, options)'
@@ -204,15 +204,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="147f5-130">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="147f5-130">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: <span data-ttu-id="152bd-123">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="152bd-123">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
           type:
             - 'excel!Excel.Interfaces.RangeFillUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="147f5-131">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="147f5-131">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: <span data-ttu-id="152bd-124">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="152bd-124">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
           type:
             - 'excel!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.RangeFill#set:member(2)'
-    summary: '<span data-ttu-id="147f5-132">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="147f5-132">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: '<span data-ttu-id="152bd-125">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="152bd-125">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -230,7 +230,7 @@ items:
           type:
             - 'excel!Excel.RangeFill:class'
   - uid: 'excel!Excel.RangeFill#toJSON:member(1)'
-    summary: '<span data-ttu-id="147f5-133">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="147f5-133">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="147f5-134">.</span><span class="sxs-lookup"><span data-stu-id="147f5-134"></span></span> <span data-ttu-id="147f5-135">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="147f5-135"></span></span><!-- --><span data-ttu-id="147f5-136">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 RangeFill 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeFillData`</span><span class="sxs-lookup"><span data-stu-id="147f5-136">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.RangeFill object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RangeFillData`</span></span><!-- --><span data-ttu-id="147f5-137">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="147f5-137">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: '<span data-ttu-id="152bd-126">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="152bd-126">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="152bd-127">.</span><span class="sxs-lookup"><span data-stu-id="152bd-127"></span></span> <span data-ttu-id="152bd-128">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="152bd-128"></span></span><!-- --><span data-ttu-id="152bd-129">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 RangeFill 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeFillData`</span><span class="sxs-lookup"><span data-stu-id="152bd-129">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.RangeFill object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RangeFillData`</span></span><!-- --><span data-ttu-id="152bd-130">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="152bd-130">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
     name: toJSON()
     fullName: toJSON()
     langs:
