--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartplotareaformat.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartplotareaformat.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ChartPlotAreaFormat:class'
     summary: |-
-      <span data-ttu-id="1e438-101">表示图表 plotArea 的格式属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-101">Represents the format properties for chart plotArea.</span></span>
+      <span data-ttu-id="5afb6-101">表示图表 plotArea 的格式属性。</span><span class="sxs-lookup"><span data-stu-id="5afb6-101">Represents the format properties for chart plotArea.</span></span>
 
-      <span data-ttu-id="1e438-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e438-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5afb6-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5afb6-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ChartPlotAreaFormat
     fullName: Excel.ChartPlotAreaFormat
     langs:
@@ -25,9 +25,9 @@ items:
       - 'excel!Excel.ChartPlotAreaFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartPlotAreaFormat#border:member'
     summary: |-
-      <span data-ttu-id="1e438-103">表示图表 plotArea 的边框属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-103">Represents the border attributes of a chart plotArea.</span></span>
+      <span data-ttu-id="5afb6-103">表示图表 plotArea 的边框属性。</span><span class="sxs-lookup"><span data-stu-id="5afb6-103">Represents the border attributes of a chart plotArea.</span></span>
 
-      <span data-ttu-id="1e438-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e438-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5afb6-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5afb6-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: border
     fullName: border
     langs:
@@ -39,7 +39,7 @@ items:
         type:
           - 'excel!Excel.ChartBorder:class'
   - uid: 'excel!Excel.ChartPlotAreaFormat#context:member'
-    summary: <span data-ttu-id="1e438-105">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="1e438-105">The request context associated with the object.</span></span> <span data-ttu-id="1e438-106">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="1e438-106">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: <span data-ttu-id="5afb6-105">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="5afb6-105">The request context associated with the object.</span></span> <span data-ttu-id="5afb6-106">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="5afb6-106">This connects the add-in's process to the Office host application's process.</span></span>
     name: context
     fullName: context
     langs:
@@ -52,9 +52,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartPlotAreaFormat#fill:member'
     summary: |-
-      <span data-ttu-id="1e438-107">表示对象的填充格式，包括背景格式信息。</span><span class="sxs-lookup"><span data-stu-id="1e438-107">Represents the fill format of an object, which includes background formatting information.</span></span>
+      <span data-ttu-id="5afb6-107">表示对象的填充格式，包括背景格式信息。</span><span class="sxs-lookup"><span data-stu-id="5afb6-107">Represents the fill format of an object, which includes background formatting information.</span></span>
 
-      <span data-ttu-id="1e438-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e438-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5afb6-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5afb6-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: fill
     fullName: fill
     langs:
@@ -66,33 +66,25 @@ items:
         type:
           - 'excel!Excel.ChartFill:class'
   - uid: 'excel!Excel.ChartPlotAreaFormat#load:member(1)'
-    summary: <span data-ttu-id="1e438-109">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-109">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1e438-110">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="1e438-110">You must call "context.sync()" before reading the properties.</span></span>
-    remarks: |-
-      <span data-ttu-id="1e438-111">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="1e438-111">In addition to this signature, this method has the following signatures:</span></span>
-
-      <span data-ttu-id="1e438-112">`load(option?: string | string[]): Excel.ChartPlotAreaFormat`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-112">`load(option?: string | string[]): Excel.ChartPlotAreaFormat` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
-
-      <span data-ttu-id="1e438-113">`load(option?: { select?: string; expand?: string; }): Excel.ChartPlotAreaFormat`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-113">`load(option?: { select?: string; expand?: string; }): Excel.ChartPlotAreaFormat` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
-
-      <span data-ttu-id="1e438-114">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartPlotAreaFormat`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="1e438-114">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartPlotAreaFormat` - Only available on collection types.</span></span> <span data-ttu-id="1e438-115">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="1e438-115">It is similar to the preceding signature.</span></span> <span data-ttu-id="1e438-116">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="1e438-116">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="1e438-117">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="1e438-117">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="1e438-118">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="1e438-118">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
-    name: load(option)
-    fullName: load(option)
+    summary: <span data-ttu-id="5afb6-109">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="5afb6-109">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="5afb6-110">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="5afb6-110">You must call `context.sync()` before reading the properties.</span></span>
+    name: load(options)
+    fullName: load(options)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(option?: Excel.Interfaces.ChartPlotAreaFormatLoadOptions): Excel.ChartPlotAreaFormat;'
+      content: 'load(options?: Excel.Interfaces.ChartPlotAreaFormatLoadOptions): Excel.ChartPlotAreaFormat;'
       return:
         type:
           - 'excel!Excel.ChartPlotAreaFormat:class'
         description: ''
       parameters:
-        - id: option
-          description: ''
+        - id: options
+          description: <span data-ttu-id="5afb6-111">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="5afb6-111">Provides options for which properties of the object to load.</span></span>
           type:
             - 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.ChartPlotAreaFormat#load:member(2)'
-    summary: <span data-ttu-id="1e438-119">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-119">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1e438-120">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="1e438-120">You must call `context.sync()` before reading the properties.</span></span>
+    summary: <span data-ttu-id="5afb6-112">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="5afb6-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="5afb6-113">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="5afb6-113">You must call `context.sync()` before reading the properties.</span></span>
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -106,31 +98,39 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="1e438-121">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-121">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: <span data-ttu-id="5afb6-114">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="5afb6-114">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartPlotAreaFormat#load:member(3)'
-    summary: <span data-ttu-id="1e438-122">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-122">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1e438-123">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="1e438-123">You must call `context.sync()` before reading the properties.</span></span>
+    summary: <span data-ttu-id="5afb6-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="5afb6-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="5afb6-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="5afb6-116">You must call `context.sync()` before reading the properties.</span></span>
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.ChartPlotAreaFormat;'
+      content: |-
+        load(propertyNamesAndPaths?: {
+                    select?: string;
+                    expand?: string;
+                }): Excel.ChartPlotAreaFormat;
       return:
         type:
           - 'excel!Excel.ChartPlotAreaFormat:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="1e438-124">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-124">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '<span data-ttu-id="5afb6-117">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="5afb6-117">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
           type:
-            - '{ select?: string; expand?: string; }'
+            - |-
+              {
+                          select?: string;
+                          expand?: string;
+                      }
   - uid: 'excel!Excel.ChartPlotAreaFormat#set:member(1)'
-    summary: '<span data-ttu-id="1e438-125">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-125">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="1e438-126">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="1e438-126">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: '<span data-ttu-id="5afb6-118">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="5afb6-118">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="5afb6-119">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="5afb6-119">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
     remarks: |-
-      <span data-ttu-id="1e438-127">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="1e438-127">This method has the following additional signature:</span></span>
+      <span data-ttu-id="5afb6-120">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="5afb6-120">This method has the following additional signature:</span></span>
 
       `set(properties: Excel.ChartPlotAreaFormat): void`
     name: 'set(properties, options)'
@@ -146,15 +146,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="1e438-128">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-128">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: <span data-ttu-id="5afb6-121">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="5afb6-121">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
           type:
             - 'excel!Excel.Interfaces.ChartPlotAreaFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="1e438-129">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="1e438-129">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: <span data-ttu-id="5afb6-122">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="5afb6-122">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
           type:
             - 'excel!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartPlotAreaFormat#set:member(2)'
-    summary: '<span data-ttu-id="1e438-130">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="1e438-130">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: '<span data-ttu-id="5afb6-123">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="5afb6-123">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -172,7 +172,7 @@ items:
           type:
             - 'excel!Excel.ChartPlotAreaFormat:class'
   - uid: 'excel!Excel.ChartPlotAreaFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="1e438-131">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="1e438-131">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="1e438-132">.</span><span class="sxs-lookup"><span data-stu-id="1e438-132"></span></span> <span data-ttu-id="1e438-133">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="1e438-133"></span></span><!-- --><span data-ttu-id="1e438-134">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPlotAreaFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPlotAreaFormatData`</span><span class="sxs-lookup"><span data-stu-id="1e438-134">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartPlotAreaFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartPlotAreaFormatData`</span></span><!-- --><span data-ttu-id="1e438-135">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="1e438-135">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: '<span data-ttu-id="5afb6-124">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="5afb6-124">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="5afb6-125">.</span><span class="sxs-lookup"><span data-stu-id="5afb6-125"></span></span> <span data-ttu-id="5afb6-126">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="5afb6-126"></span></span><!-- --><span data-ttu-id="5afb6-127">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPlotAreaFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPlotAreaFormatData`</span><span class="sxs-lookup"><span data-stu-id="5afb6-127">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartPlotAreaFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartPlotAreaFormatData`</span></span><!-- --><span data-ttu-id="5afb6-128">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="5afb6-128">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
     name: toJSON()
     fullName: toJSON()
     langs:
