--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangeformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatUpdateData:interface'
-    summary: '<span data-ttu-id="d2e55-101">一个用于更新 ConditionalRangeFormat 对象上的数据的接口，可用于 "conditionalRangeFormat （</span><span class="sxs-lookup"><span data-stu-id="d2e55-101">An interface for updating data on the ConditionalRangeFormat object, for use in "conditionalRangeFormat.set(</span></span><!-- --><span data-ttu-id="d2e55-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="d2e55-102"></span></span><!-- --><span data-ttu-id="d2e55-103">)".</span><span class="sxs-lookup"><span data-stu-id="d2e55-103"></span></span>'
+    summary: '<span data-ttu-id="7ce7b-101">一个用于更新 ConditionalRangeFormat 对象上的数据的接口，可用于`conditionalRangeFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="7ce7b-101">An interface for updating data on the ConditionalRangeFormat object, for use in `conditionalRangeFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="7ce7b-102">.</span><span class="sxs-lookup"><span data-stu-id="7ce7b-102"></span></span>'
     name: Excel.Interfaces.ConditionalRangeFormatUpdateData
     fullName: Excel.Interfaces.ConditionalRangeFormatUpdateData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeFormatUpdateData#numberFormat:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatUpdateData#borders:member'
     summary: |-
-      <span data-ttu-id="d2e55-104">应用于整体条件格式范围的 border 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="d2e55-104">Collection of border objects that apply to the overall conditional format range.</span></span>
+      <span data-ttu-id="7ce7b-103">应用于整体条件格式范围的 border 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="7ce7b-103">Collection of border objects that apply to the overall conditional format range.</span></span>
 
-      <span data-ttu-id="d2e55-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2e55-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="7ce7b-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7ce7b-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: borders
     fullName: borders
     langs:
@@ -30,9 +30,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatUpdateData#fill:member'
     summary: |-
-      <span data-ttu-id="d2e55-106">返回在整体条件格式范围上定义的 fill 对象。</span><span class="sxs-lookup"><span data-stu-id="d2e55-106">Returns the fill object defined on the overall conditional format range.</span></span>
+      <span data-ttu-id="7ce7b-105">返回在整体条件格式范围上定义的 fill 对象。</span><span class="sxs-lookup"><span data-stu-id="7ce7b-105">Returns the fill object defined on the overall conditional format range.</span></span>
 
-      <span data-ttu-id="d2e55-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2e55-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="7ce7b-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7ce7b-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: fill
     fullName: fill
     langs:
@@ -45,9 +45,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatUpdateData#font:member'
     summary: |-
-      <span data-ttu-id="d2e55-108">返回在整体条件格式区域上定义的 font 对象。</span><span class="sxs-lookup"><span data-stu-id="d2e55-108">Returns the font object defined on the overall conditional format range.</span></span>
+      <span data-ttu-id="7ce7b-107">返回在整体条件格式区域上定义的 font 对象。</span><span class="sxs-lookup"><span data-stu-id="7ce7b-107">Returns the font object defined on the overall conditional format range.</span></span>
 
-      <span data-ttu-id="d2e55-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2e55-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="7ce7b-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7ce7b-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: font
     fullName: font
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFontUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatUpdateData#numberFormat:member'
     summary: |-
-      <span data-ttu-id="d2e55-110">表示给定范围的 Excel 数字格式代码。</span><span class="sxs-lookup"><span data-stu-id="d2e55-110">Represents Excel's number format code for the given range.</span></span> <span data-ttu-id="d2e55-111">如果传入 null，则清除。</span><span class="sxs-lookup"><span data-stu-id="d2e55-111">Cleared if null is passed in.</span></span>
+      <span data-ttu-id="7ce7b-109">表示给定范围的 Excel 数字格式代码。</span><span class="sxs-lookup"><span data-stu-id="7ce7b-109">Represents Excel's number format code for the given range.</span></span> <span data-ttu-id="7ce7b-110">如果传入 null，则清除。</span><span class="sxs-lookup"><span data-stu-id="7ce7b-110">Cleared if null is passed in.</span></span>
 
-      <span data-ttu-id="d2e55-112">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2e55-112">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="7ce7b-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7ce7b-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: numberFormat
     fullName: numberFormat
     langs:
