--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivotlayoutloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivotlayoutloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="f1366-101">表示数据透视表的可视化布局。</span><span class="sxs-lookup"><span data-stu-id="f1366-101">Represents the visual layout of the PivotTable.</span></span>
+      <span data-ttu-id="ca711-101">表示数据透视表的可视化布局。</span><span class="sxs-lookup"><span data-stu-id="ca711-101">Represents the visual layout of the PivotTable.</span></span>
 
-      <span data-ttu-id="f1366-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1366-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca711-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca711-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.PivotLayoutLoadOptions
     fullName: Excel.Interfaces.PivotLayoutLoadOptions
     langs:
@@ -18,6 +18,7 @@ items:
       - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#showRowGrandTotals:member'
       - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#subtotalLocation:member'
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#$all:member'
+    summary: '<span data-ttu-id="ca711-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="ca711-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="ca711-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="ca711-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="ca711-105">).</span><span class="sxs-lookup"><span data-stu-id="ca711-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -30,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#layoutType:member'
     summary: |-
-      <span data-ttu-id="f1366-103">此属性指示数据透视表上的所有字段的 PivotLayoutType。</span><span class="sxs-lookup"><span data-stu-id="f1366-103">This property indicates the PivotLayoutType of all fields on the PivotTable.</span></span> <span data-ttu-id="f1366-104">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="f1366-104">If fields have different states, this will be null.</span></span>
+      <span data-ttu-id="ca711-106">此属性指示数据透视表上的所有字段的 PivotLayoutType。</span><span class="sxs-lookup"><span data-stu-id="ca711-106">This property indicates the PivotLayoutType of all fields on the PivotTable.</span></span> <span data-ttu-id="ca711-107">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="ca711-107">If fields have different states, this will be null.</span></span>
 
-      <span data-ttu-id="f1366-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1366-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca711-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca711-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: layoutType
     fullName: layoutType
     langs:
@@ -45,9 +46,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#showColumnGrandTotals:member'
     summary: |-
-      <span data-ttu-id="f1366-106">指定数据透视表报表是否显示列总计。</span><span class="sxs-lookup"><span data-stu-id="f1366-106">Specifies whether the PivotTable report shows grand totals for columns.</span></span>
+      <span data-ttu-id="ca711-109">指定数据透视表报表是否显示列总计。</span><span class="sxs-lookup"><span data-stu-id="ca711-109">Specifies whether the PivotTable report shows grand totals for columns.</span></span>
 
-      <span data-ttu-id="f1366-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1366-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca711-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca711-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showColumnGrandTotals
     fullName: showColumnGrandTotals
     langs:
@@ -60,9 +61,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#showRowGrandTotals:member'
     summary: |-
-      <span data-ttu-id="f1366-108">指定数据透视表报表是否显示行总计。</span><span class="sxs-lookup"><span data-stu-id="f1366-108">Specifies whether the PivotTable report shows grand totals for rows.</span></span>
+      <span data-ttu-id="ca711-111">指定数据透视表报表是否显示行总计。</span><span class="sxs-lookup"><span data-stu-id="ca711-111">Specifies whether the PivotTable report shows grand totals for rows.</span></span>
 
-      <span data-ttu-id="f1366-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1366-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca711-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca711-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showRowGrandTotals
     fullName: showRowGrandTotals
     langs:
@@ -75,9 +76,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#subtotalLocation:member'
     summary: |-
-      <span data-ttu-id="f1366-110">此属性指示数据透视表上的所有字段的 SubtotalLocationType。</span><span class="sxs-lookup"><span data-stu-id="f1366-110">This property indicates the SubtotalLocationType of all fields on the PivotTable.</span></span> <span data-ttu-id="f1366-111">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="f1366-111">If fields have different states, this will be null.</span></span>
+      <span data-ttu-id="ca711-113">此属性指示数据透视表上的所有字段的 SubtotalLocationType。</span><span class="sxs-lookup"><span data-stu-id="ca711-113">This property indicates the SubtotalLocationType of all fields on the PivotTable.</span></span> <span data-ttu-id="ca711-114">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="ca711-114">If fields have different states, this will be null.</span></span>
 
-      <span data-ttu-id="f1366-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1366-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca711-115">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca711-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: subtotalLocation
     fullName: subtotalLocation
     langs:
