--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapefontdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapefontdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeFontData:interface'
-    summary: <span data-ttu-id="b76a2-101">描述通过调用 "shapeFont （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="b76a2-101">An interface describing the data returned by calling "shapeFont.toJSON()".</span></span>
+    summary: <span data-ttu-id="d686c-101">描述通过调用返回的数据的接口`shapeFont.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="d686c-101">An interface describing the data returned by calling `shapeFont.toJSON()`</span></span><!-- --><span data-ttu-id="d686c-102">.</span><span class="sxs-lookup"><span data-stu-id="d686c-102"></span></span>
     name: Excel.Interfaces.ShapeFontData
     fullName: Excel.Interfaces.ShapeFontData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.ShapeFontData#underline:member'
   - uid: 'excel!Excel.Interfaces.ShapeFontData#bold:member'
     summary: |-
-      <span data-ttu-id="b76a2-102">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="b76a2-102">Represents the bold status of font.</span></span> <span data-ttu-id="b76a2-103">如果 TextRange 包含粗体和非粗体文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="b76a2-103">Returns null the TextRange includes both bold and non-bold text fragments.</span></span>
+      <span data-ttu-id="d686c-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="d686c-103">Represents the bold status of font.</span></span> <span data-ttu-id="d686c-104">如果 TextRange 包含粗体和非粗体文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="d686c-104">Returns null the TextRange includes both bold and non-bold text fragments.</span></span>
 
-      <span data-ttu-id="b76a2-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b76a2-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d686c-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d686c-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: bold
     fullName: bold
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeFontData#color:member'
     summary: |-
-      <span data-ttu-id="b76a2-105">文本颜色的 HTML 颜色代码表示形式（例如，"\#FF0000" 代表红色）。</span><span class="sxs-lookup"><span data-stu-id="b76a2-105">The HTML color code representation of the text color (e.g. "\#FF0000" represents red).</span></span> <span data-ttu-id="b76a2-106">如果 TextRange 包含具有不同颜色的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="b76a2-106">Returns null if the TextRange includes text fragments with different colors.</span></span>
+      <span data-ttu-id="d686c-106">文本颜色的 HTML 颜色代码表示形式（例如，"\#FF0000" 代表红色）。</span><span class="sxs-lookup"><span data-stu-id="d686c-106">The HTML color code representation of the text color (e.g. "\#FF0000" represents red).</span></span> <span data-ttu-id="d686c-107">如果 TextRange 包含具有不同颜色的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="d686c-107">Returns null if the TextRange includes text fragments with different colors.</span></span>
 
-      <span data-ttu-id="b76a2-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b76a2-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d686c-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d686c-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -47,9 +47,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ShapeFontData#italic:member'
     summary: |-
-      <span data-ttu-id="b76a2-108">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="b76a2-108">Represents the italic status of font.</span></span> <span data-ttu-id="b76a2-109">如果 TextRange 包含斜体和非斜体文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="b76a2-109">Returns null if the TextRange includes both italic and non-italic text fragments.</span></span>
+      <span data-ttu-id="d686c-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="d686c-109">Represents the italic status of font.</span></span> <span data-ttu-id="d686c-110">如果 TextRange 包含斜体和非斜体文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="d686c-110">Returns null if the TextRange includes both italic and non-italic text fragments.</span></span>
 
-      <span data-ttu-id="b76a2-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b76a2-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d686c-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d686c-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: italic
     fullName: italic
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeFontData#name:member'
     summary: |-
-      <span data-ttu-id="b76a2-111">表示字体名称（例如“Calibri”）。</span><span class="sxs-lookup"><span data-stu-id="b76a2-111">Represents font name (e.g. "Calibri").</span></span> <span data-ttu-id="b76a2-112">如果文本是复杂脚本或东亚语言，则这是相应的字体名称，否则是拉丁字体名称。</span><span class="sxs-lookup"><span data-stu-id="b76a2-112">If the text is Complex Script or East Asian language, this is the corresponding font name; otherwise it is the Latin font name.</span></span>
+      <span data-ttu-id="d686c-112">表示字体名称（例如“Calibri”）。</span><span class="sxs-lookup"><span data-stu-id="d686c-112">Represents font name (e.g. "Calibri").</span></span> <span data-ttu-id="d686c-113">如果文本是复杂脚本或东亚语言，则这是相应的字体名称，否则是拉丁字体名称。</span><span class="sxs-lookup"><span data-stu-id="d686c-113">If the text is Complex Script or East Asian language, this is the corresponding font name; otherwise it is the Latin font name.</span></span>
 
-      <span data-ttu-id="b76a2-113">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b76a2-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d686c-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d686c-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -77,9 +77,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ShapeFontData#size:member'
     summary: |-
-      <span data-ttu-id="b76a2-114">表示以磅为单位的字体大小（例如 11）。</span><span class="sxs-lookup"><span data-stu-id="b76a2-114">Represents font size in points (e.g. 11).</span></span> <span data-ttu-id="b76a2-115">如果 TextRange 包含具有不同字体大小的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="b76a2-115">Returns null if the TextRange includes text fragments with different font sizes.</span></span>
+      <span data-ttu-id="d686c-115">表示以磅为单位的字体大小（例如 11）。</span><span class="sxs-lookup"><span data-stu-id="d686c-115">Represents font size in points (e.g. 11).</span></span> <span data-ttu-id="d686c-116">如果 TextRange 包含具有不同字体大小的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="d686c-116">Returns null if the TextRange includes text fragments with different font sizes.</span></span>
 
-      <span data-ttu-id="b76a2-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b76a2-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d686c-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d686c-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: size
     fullName: size
     langs:
@@ -92,9 +92,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ShapeFontData#underline:member'
     summary: |-
-      <span data-ttu-id="b76a2-117">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="b76a2-117">Type of underline applied to the font.</span></span> <span data-ttu-id="b76a2-118">如果 TextRange 包含具有不同下划线样式的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="b76a2-118">Returns null if the TextRange includes text fragments with different underline styles.</span></span> <span data-ttu-id="b76a2-119">有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="b76a2-119">See Excel.ShapeFontUnderlineStyle for details.</span></span>
+      <span data-ttu-id="d686c-118">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="d686c-118">Type of underline applied to the font.</span></span> <span data-ttu-id="d686c-119">如果 TextRange 包含具有不同下划线样式的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="d686c-119">Returns null if the TextRange includes text fragments with different underline styles.</span></span> <span data-ttu-id="d686c-120">有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="d686c-120">See Excel.ShapeFontUnderlineStyle for details.</span></span>
 
-      <span data-ttu-id="b76a2-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b76a2-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d686c-121">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d686c-121">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: underline
     fullName: underline
     langs:
