--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.pivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.pivothierarchyupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotHierarchyUpdateData:interface'
-    summary: '<span data-ttu-id="ca147-101">一个用于更新 PivotHierarchy 对象上的数据的接口，可用于 "pivotHierarchy （</span><span class="sxs-lookup"><span data-stu-id="ca147-101">An interface for updating data on the PivotHierarchy object, for use in "pivotHierarchy.set(</span></span><!-- --><span data-ttu-id="ca147-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="ca147-102"></span></span><!-- --><span data-ttu-id="ca147-103">)".</span><span class="sxs-lookup"><span data-stu-id="ca147-103"></span></span>'
+    summary: '<span data-ttu-id="c1277-101">一个用于更新 PivotHierarchy 对象上的数据的接口，可用于`pivotHierarchy.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="c1277-101">An interface for updating data on the PivotHierarchy object, for use in `pivotHierarchy.set({ ... })`</span></span><!-- --><span data-ttu-id="c1277-102">.</span><span class="sxs-lookup"><span data-stu-id="c1277-102"></span></span>'
     name: Excel.Interfaces.PivotHierarchyUpdateData
     fullName: Excel.Interfaces.PivotHierarchyUpdateData
     langs:
