--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.shapecollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.shapecollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeCollectionData:interface'
-    summary: <span data-ttu-id="de050-101">描述通过调用 "shapeCollection （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="de050-101">An interface describing the data returned by calling "shapeCollection.toJSON()".</span></span>
+    summary: <span data-ttu-id="510be-101">描述通过调用返回的数据的接口`shapeCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="510be-101">An interface describing the data returned by calling `shapeCollection.toJSON()`</span></span><!-- --><span data-ttu-id="510be-102">.</span><span class="sxs-lookup"><span data-stu-id="510be-102"></span></span>
     name: Excel.Interfaces.ShapeCollectionData
     fullName: Excel.Interfaces.ShapeCollectionData
     langs:
