--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.shapelineformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.shapelineformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatData:interface'
-    summary: <span data-ttu-id="c2a48-101">描述通过调用 "shapeLineFormat （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="c2a48-101">An interface describing the data returned by calling "shapeLineFormat.toJSON()".</span></span>
+    summary: <span data-ttu-id="b6570-101">描述通过调用返回的数据的接口`shapeLineFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="b6570-101">An interface describing the data returned by calling `shapeLineFormat.toJSON()`</span></span><!-- --><span data-ttu-id="b6570-102">.</span><span class="sxs-lookup"><span data-stu-id="b6570-102"></span></span>
     name: Excel.Interfaces.ShapeLineFormatData
     fullName: Excel.Interfaces.ShapeLineFormatData
     langs:
