--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.topbottomconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.topbottomconditionalformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="3c46d-101">表示顶部/底部条件格式。</span><span class="sxs-lookup"><span data-stu-id="3c46d-101">Represents a Top/Bottom conditional format.</span></span>
+      <span data-ttu-id="b85ba-101">表示顶部/底部条件格式。</span><span class="sxs-lookup"><span data-stu-id="b85ba-101">Represents a Top/Bottom conditional format.</span></span>
 
-      <span data-ttu-id="3c46d-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c46d-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b85ba-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b85ba-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.TopBottomConditionalFormatLoadOptions
     fullName: Excel.Interfaces.TopBottomConditionalFormatLoadOptions
     langs:
@@ -16,6 +16,7 @@ items:
       - 'excel!Excel.Interfaces.TopBottomConditionalFormatLoadOptions#format:member'
       - 'excel!Excel.Interfaces.TopBottomConditionalFormatLoadOptions#rule:member'
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatLoadOptions#$all:member'
+    summary: '<span data-ttu-id="b85ba-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="b85ba-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="b85ba-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="b85ba-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="b85ba-105">).</span><span class="sxs-lookup"><span data-stu-id="b85ba-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="3c46d-103">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="3c46d-103">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+      <span data-ttu-id="b85ba-106">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="b85ba-106">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
 
-      <span data-ttu-id="3c46d-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c46d-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b85ba-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b85ba-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -43,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatLoadOptions#rule:member'
     summary: |-
-      <span data-ttu-id="3c46d-105">顶部/底部条件格式的条件。</span><span class="sxs-lookup"><span data-stu-id="3c46d-105">The criteria of the Top/Bottom conditional format.</span></span>
+      <span data-ttu-id="b85ba-108">顶部/底部条件格式的条件。</span><span class="sxs-lookup"><span data-stu-id="b85ba-108">The criteria of the Top/Bottom conditional format.</span></span>
 
-      <span data-ttu-id="3c46d-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c46d-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b85ba-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b85ba-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: rule
     fullName: rule
     langs:
