--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.workbookdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.workbookdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorkbookData:interface'
-    summary: <span data-ttu-id="eb155-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="eb155-101">An interface describing the data returned by calling "workbook.toJSON()".</span></span>
+    summary: <span data-ttu-id="0357c-101">描述通过调用返回的数据的接口`workbook.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="0357c-101">An interface describing the data returned by calling `workbook.toJSON()`</span></span><!-- --><span data-ttu-id="0357c-102">.</span><span class="sxs-lookup"><span data-stu-id="0357c-102"></span></span>
     name: Excel.Interfaces.WorkbookData
     fullName: Excel.Interfaces.WorkbookData
     langs:
@@ -22,9 +22,9 @@ items:
       - 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
   - uid: 'excel!Excel.Interfaces.WorkbookData#bindings:member'
     summary: |-
-      <span data-ttu-id="eb155-102">表示属于工作簿的绑定的集合。</span><span class="sxs-lookup"><span data-stu-id="eb155-102">Represents a collection of bindings that are part of the workbook.</span></span> <span data-ttu-id="eb155-103">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-103">Read-only.</span></span>
+      <span data-ttu-id="0357c-103">表示属于工作簿的绑定的集合。</span><span class="sxs-lookup"><span data-stu-id="0357c-103">Represents a collection of bindings that are part of the workbook.</span></span> <span data-ttu-id="0357c-104">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-104">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: bindings
     fullName: bindings
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#bindings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#customXmlParts:member'
     summary: |-
-      <span data-ttu-id="eb155-105">表示此工作簿包含的自定义 XML 部件的集合。</span><span class="sxs-lookup"><span data-stu-id="eb155-105">Represents the collection of custom XML parts contained by this workbook.</span></span> <span data-ttu-id="eb155-106">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-106">Read-only.</span></span>
+      <span data-ttu-id="0357c-106">表示此工作簿包含的自定义 XML 部件的集合。</span><span class="sxs-lookup"><span data-stu-id="0357c-106">Represents the collection of custom XML parts contained by this workbook.</span></span> <span data-ttu-id="0357c-107">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-107">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-107">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-107">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-108">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-108">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: customXmlParts
     fullName: customXmlParts
     langs:
@@ -52,9 +52,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#customXmlParts~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#name:member'
     summary: |-
-      <span data-ttu-id="eb155-108">获取工作簿名称。</span><span class="sxs-lookup"><span data-stu-id="eb155-108">Gets the workbook name.</span></span> <span data-ttu-id="eb155-109">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-109">Read-only.</span></span>
+      <span data-ttu-id="0357c-109">获取工作簿名称。</span><span class="sxs-lookup"><span data-stu-id="0357c-109">Gets the workbook name.</span></span> <span data-ttu-id="0357c-110">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-110">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -67,9 +67,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorkbookData#names:member'
     summary: |-
-      <span data-ttu-id="eb155-111">表示工作簿范围内的已命名项目（称为区域和常量）的集合。</span><span class="sxs-lookup"><span data-stu-id="eb155-111">Represents a collection of workbook scoped named items (named ranges and constants).</span></span> <span data-ttu-id="eb155-112">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-112">Read-only.</span></span>
+      <span data-ttu-id="0357c-112">表示工作簿范围内的已命名项目（称为区域和常量）的集合。</span><span class="sxs-lookup"><span data-stu-id="0357c-112">Represents a collection of workbook scoped named items (named ranges and constants).</span></span> <span data-ttu-id="0357c-113">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-113">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: names
     fullName: names
     langs:
@@ -82,9 +82,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#names~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#pivotTables:member'
     summary: |-
-      <span data-ttu-id="eb155-114">表示一组与 workbook 相关联的 PivotTable 对象。</span><span class="sxs-lookup"><span data-stu-id="eb155-114">Represents a collection of PivotTables associated with the workbook.</span></span> <span data-ttu-id="eb155-115">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-115">Read-only.</span></span>
+      <span data-ttu-id="0357c-115">表示一组与 workbook 相关联的 PivotTable 对象。</span><span class="sxs-lookup"><span data-stu-id="0357c-115">Represents a collection of PivotTables associated with the workbook.</span></span> <span data-ttu-id="0357c-116">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-116">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-116">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-116">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-117">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-117">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: pivotTables
     fullName: pivotTables
     langs:
@@ -97,9 +97,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#pivotTables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#properties:member'
     summary: |-
-      <span data-ttu-id="eb155-117">获取工作簿属性。</span><span class="sxs-lookup"><span data-stu-id="eb155-117">Gets the workbook properties.</span></span> <span data-ttu-id="eb155-118">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-118">Read-only.</span></span>
+      <span data-ttu-id="0357c-118">获取工作簿属性。</span><span class="sxs-lookup"><span data-stu-id="0357c-118">Gets the workbook properties.</span></span> <span data-ttu-id="0357c-119">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-119">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-119">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: properties
     fullName: properties
     langs:
@@ -112,9 +112,9 @@ items:
           - 'excel!Excel.Interfaces.DocumentPropertiesData:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookData#protection:member'
     summary: |-
-      <span data-ttu-id="eb155-120">返回工作簿的工作簿保护对象。</span><span class="sxs-lookup"><span data-stu-id="eb155-120">Returns workbook protection object for a workbook.</span></span> <span data-ttu-id="eb155-121">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-121">Read-only.</span></span>
+      <span data-ttu-id="0357c-121">返回工作簿的工作簿保护对象。</span><span class="sxs-lookup"><span data-stu-id="0357c-121">Returns workbook protection object for a workbook.</span></span> <span data-ttu-id="0357c-122">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-122">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-122">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: protection
     fullName: protection
     langs:
@@ -127,9 +127,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookProtectionData:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookData#settings:member'
     summary: |-
-      <span data-ttu-id="eb155-123">表示一组与 workbook 相关联的 setting 对象。</span><span class="sxs-lookup"><span data-stu-id="eb155-123">Represents a collection of Settings associated with the workbook.</span></span> <span data-ttu-id="eb155-124">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-124">Read-only.</span></span>
+      <span data-ttu-id="0357c-124">表示一组与 workbook 相关联的 setting 对象。</span><span class="sxs-lookup"><span data-stu-id="0357c-124">Represents a collection of Settings associated with the workbook.</span></span> <span data-ttu-id="0357c-125">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-125">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-125">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-125">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-126">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-126">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: settings
     fullName: settings
     langs:
@@ -142,9 +142,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#settings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#styles:member'
     summary: |-
-      <span data-ttu-id="eb155-126">表示与工作簿关联的样式的集合。</span><span class="sxs-lookup"><span data-stu-id="eb155-126">Represents a collection of styles associated with the workbook.</span></span> <span data-ttu-id="eb155-127">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-127">Read-only.</span></span>
+      <span data-ttu-id="0357c-127">表示与工作簿关联的样式的集合。</span><span class="sxs-lookup"><span data-stu-id="0357c-127">Represents a collection of styles associated with the workbook.</span></span> <span data-ttu-id="0357c-128">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-128">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-128">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-129">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-129">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: styles
     fullName: styles
     langs:
@@ -157,9 +157,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#styles~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#tables:member'
     summary: |-
-      <span data-ttu-id="eb155-129">表示与工作簿关联的表的集合。</span><span class="sxs-lookup"><span data-stu-id="eb155-129">Represents a collection of tables associated with the workbook.</span></span> <span data-ttu-id="eb155-130">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-130">Read-only.</span></span>
+      <span data-ttu-id="0357c-130">表示与工作簿关联的表的集合。</span><span class="sxs-lookup"><span data-stu-id="0357c-130">Represents a collection of tables associated with the workbook.</span></span> <span data-ttu-id="0357c-131">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-131">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-131">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-131">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-132">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-132">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tables
     fullName: tables
     langs:
@@ -172,9 +172,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#tables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
     summary: |-
-      <span data-ttu-id="eb155-132">表示与工作簿关联的工作表的集合。</span><span class="sxs-lookup"><span data-stu-id="eb155-132">Represents a collection of worksheets associated with the workbook.</span></span> <span data-ttu-id="eb155-133">只读。</span><span class="sxs-lookup"><span data-stu-id="eb155-133">Read-only.</span></span>
+      <span data-ttu-id="0357c-133">表示与工作簿关联的工作表的集合。</span><span class="sxs-lookup"><span data-stu-id="0357c-133">Represents a collection of worksheets associated with the workbook.</span></span> <span data-ttu-id="0357c-134">只读。</span><span class="sxs-lookup"><span data-stu-id="0357c-134">Read-only.</span></span>
 
-      <span data-ttu-id="eb155-134">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb155-134">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0357c-135">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0357c-135">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: worksheets
     fullName: worksheets
     langs:
