--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.worksheetloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.worksheetloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="a16ee-101">Excel 工作表是由单元格组成的网格。</span><span class="sxs-lookup"><span data-stu-id="a16ee-101">An Excel worksheet is a grid of cells.</span></span> <span data-ttu-id="a16ee-102">它可以包含数据、表、图表等。若要了解有关工作表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-worksheets)</span><span class="sxs-lookup"><span data-stu-id="a16ee-102">It can contain data, tables, charts, etc. To learn more about the worksheet object model, read [Work with worksheets using the Excel JavaScript API](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-worksheets)</span></span><!-- --><span data-ttu-id="a16ee-103">.</span><span class="sxs-lookup"><span data-stu-id="a16ee-103"></span></span>
+      <span data-ttu-id="a7f67-101">Excel 工作表是由单元格组成的网格。</span><span class="sxs-lookup"><span data-stu-id="a7f67-101">An Excel worksheet is a grid of cells.</span></span> <span data-ttu-id="a7f67-102">它可以包含数据、表、图表等。若要了解有关工作表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-worksheets)</span><span class="sxs-lookup"><span data-stu-id="a7f67-102">It can contain data, tables, charts, etc. To learn more about the worksheet object model, read [Work with worksheets using the Excel JavaScript API](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-worksheets)</span></span><!-- --><span data-ttu-id="a7f67-103">.</span><span class="sxs-lookup"><span data-stu-id="a7f67-103"></span></span>
 
-      <span data-ttu-id="a16ee-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a7f67-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.WorksheetLoadOptions
     fullName: Excel.Interfaces.WorksheetLoadOptions
     langs:
@@ -24,6 +24,7 @@ items:
       - 'excel!Excel.Interfaces.WorksheetLoadOptions#tables:member'
       - 'excel!Excel.Interfaces.WorksheetLoadOptions#visibility:member'
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#$all:member'
+    summary: '<span data-ttu-id="a7f67-105">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="a7f67-105">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="a7f67-106">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="a7f67-106">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="a7f67-107">).</span><span class="sxs-lookup"><span data-stu-id="a7f67-107"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -36,9 +37,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#charts:member'
     summary: |-
-      <span data-ttu-id="a16ee-105">返回属于工作表的图表的集合。</span><span class="sxs-lookup"><span data-stu-id="a16ee-105">Returns collection of charts that are part of the worksheet.</span></span>
+      <span data-ttu-id="a7f67-108">返回属于工作表的图表的集合。</span><span class="sxs-lookup"><span data-stu-id="a7f67-108">Returns collection of charts that are part of the worksheet.</span></span>
 
-      <span data-ttu-id="a16ee-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a7f67-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: charts
     fullName: charts
     langs:
@@ -51,9 +52,9 @@ items:
           - 'excel!Excel.Interfaces.ChartCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="a16ee-p102">返回用于唯一标识指定工作簿中工作表的值。即使工作表被重命名或移动，标识符的值仍然相同。只读。</span><span class="sxs-lookup"><span data-stu-id="a16ee-p102">Returns a value that uniquely identifies the worksheet in a given workbook. The value of the identifier remains the same even when the worksheet is renamed or moved. Read-only.</span></span>
+      <span data-ttu-id="a7f67-p102">返回用于唯一标识指定工作簿中工作表的值。即使工作表被重命名或移动，标识符的值仍然相同。只读。</span><span class="sxs-lookup"><span data-stu-id="a7f67-p102">Returns a value that uniquely identifies the worksheet in a given workbook. The value of the identifier remains the same even when the worksheet is renamed or moved. Read-only.</span></span>
 
-      <span data-ttu-id="a16ee-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a7f67-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -66,9 +67,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="a16ee-111">工作表的显示名称。</span><span class="sxs-lookup"><span data-stu-id="a16ee-111">The display name of the worksheet.</span></span>
+      <span data-ttu-id="a7f67-114">工作表的显示名称。</span><span class="sxs-lookup"><span data-stu-id="a7f67-114">The display name of the worksheet.</span></span>
 
-      <span data-ttu-id="a16ee-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a7f67-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -81,9 +82,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#position:member'
     summary: |-
-      <span data-ttu-id="a16ee-113">工作表在工作簿中的位置，从零开始。</span><span class="sxs-lookup"><span data-stu-id="a16ee-113">The zero-based position of the worksheet within the workbook.</span></span>
+      <span data-ttu-id="a7f67-116">工作表在工作簿中的位置，从零开始。</span><span class="sxs-lookup"><span data-stu-id="a7f67-116">The zero-based position of the worksheet within the workbook.</span></span>
 
-      <span data-ttu-id="a16ee-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a7f67-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: position
     fullName: position
     langs:
@@ -96,9 +97,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#protection:member'
     summary: |-
-      <span data-ttu-id="a16ee-115">返回表工作表的工作表保护对象。</span><span class="sxs-lookup"><span data-stu-id="a16ee-115">Returns sheet protection object for a worksheet.</span></span>
+      <span data-ttu-id="a7f67-118">返回表工作表的工作表保护对象。</span><span class="sxs-lookup"><span data-stu-id="a7f67-118">Returns sheet protection object for a worksheet.</span></span>
 
-      <span data-ttu-id="a16ee-116">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-116">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a7f67-119">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-119">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: protection
     fullName: protection
     langs:
@@ -111,9 +112,9 @@ items:
           - 'excel!Excel.Interfaces.WorksheetProtectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#standardHeight:member'
     summary: |-
-      <span data-ttu-id="a16ee-117">返回工作表中所有行的标准（默认）行高，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="a16ee-117">Returns the standard (default) height of all the rows in the worksheet, in points.</span></span> <span data-ttu-id="a16ee-118">只读。</span><span class="sxs-lookup"><span data-stu-id="a16ee-118">Read-only.</span></span>
+      <span data-ttu-id="a7f67-120">返回工作表中所有行的标准（默认）行高，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="a7f67-120">Returns the standard (default) height of all the rows in the worksheet, in points.</span></span> <span data-ttu-id="a7f67-121">只读。</span><span class="sxs-lookup"><span data-stu-id="a7f67-121">Read-only.</span></span>
 
-      <span data-ttu-id="a16ee-119">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a7f67-122">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: standardHeight
     fullName: standardHeight
     langs:
@@ -126,9 +127,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#standardWidth:member'
     summary: |-
-      <span data-ttu-id="a16ee-120">返回或设置工作表中所有列的标准（默认）列宽。</span><span class="sxs-lookup"><span data-stu-id="a16ee-120">Returns or sets the standard (default) width of all the columns in the worksheet.</span></span> <span data-ttu-id="a16ee-121">一个列宽单位等于“常规”样式中一个字符的宽度。</span><span class="sxs-lookup"><span data-stu-id="a16ee-121">One unit of column width is equal to the width of one character in the Normal style.</span></span> <span data-ttu-id="a16ee-122">对于比例字体，则使用字符 0（零）的宽度。</span><span class="sxs-lookup"><span data-stu-id="a16ee-122">For proportional fonts, the width of the character 0 (zero) is used.</span></span>
+      <span data-ttu-id="a7f67-123">返回或设置工作表中所有列的标准（默认）列宽。</span><span class="sxs-lookup"><span data-stu-id="a7f67-123">Returns or sets the standard (default) width of all the columns in the worksheet.</span></span> <span data-ttu-id="a7f67-124">一个列宽单位等于“常规”样式中一个字符的宽度。</span><span class="sxs-lookup"><span data-stu-id="a7f67-124">One unit of column width is equal to the width of one character in the Normal style.</span></span> <span data-ttu-id="a7f67-125">对于比例字体，则使用字符 0（零）的宽度。</span><span class="sxs-lookup"><span data-stu-id="a7f67-125">For proportional fonts, the width of the character 0 (zero) is used.</span></span>
 
-      <span data-ttu-id="a16ee-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a7f67-126">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: standardWidth
     fullName: standardWidth
     langs:
@@ -141,9 +142,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#tabColor:member'
     summary: |-
-      <span data-ttu-id="a16ee-124">获取或设置工作表标签颜色。</span><span class="sxs-lookup"><span data-stu-id="a16ee-124">Gets or sets the worksheet tab color.</span></span> <span data-ttu-id="a16ee-125">检索选项卡颜色时，如果工作表不可见，则值将为 null。</span><span class="sxs-lookup"><span data-stu-id="a16ee-125">When retrieving the tab color, if the worksheet is invisible, the value will be null.</span></span> <span data-ttu-id="a16ee-126">如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。</span><span class="sxs-lookup"><span data-stu-id="a16ee-126">If the worksheet is visible but the tab color is set to auto, an empty string will be returned.</span></span> <span data-ttu-id="a16ee-127">否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。</span><span class="sxs-lookup"><span data-stu-id="a16ee-127">Otherwise, the property will be set to a color, in the form "\#123456" When setting the color, use an empty-string to set an "auto" color, or a real color otherwise.</span></span>
+      <span data-ttu-id="a7f67-127">获取或设置工作表标签颜色。</span><span class="sxs-lookup"><span data-stu-id="a7f67-127">Gets or sets the worksheet tab color.</span></span> <span data-ttu-id="a7f67-128">检索选项卡颜色时，如果工作表不可见，则值将为 null。</span><span class="sxs-lookup"><span data-stu-id="a7f67-128">When retrieving the tab color, if the worksheet is invisible, the value will be null.</span></span> <span data-ttu-id="a7f67-129">如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。</span><span class="sxs-lookup"><span data-stu-id="a7f67-129">If the worksheet is visible but the tab color is set to auto, an empty string will be returned.</span></span> <span data-ttu-id="a7f67-130">否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。</span><span class="sxs-lookup"><span data-stu-id="a7f67-130">Otherwise, the property will be set to a color, in the form "\#123456" When setting the color, use an empty-string to set an "auto" color, or a real color otherwise.</span></span>
 
-      <span data-ttu-id="a16ee-128">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a7f67-131">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-131">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tabColor
     fullName: tabColor
     langs:
@@ -156,9 +157,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#tables:member'
     summary: |-
-      <span data-ttu-id="a16ee-129">属于工作表的表的集合。</span><span class="sxs-lookup"><span data-stu-id="a16ee-129">Collection of tables that are part of the worksheet.</span></span>
+      <span data-ttu-id="a7f67-132">属于工作表的表的集合。</span><span class="sxs-lookup"><span data-stu-id="a7f67-132">Collection of tables that are part of the worksheet.</span></span>
 
-      <span data-ttu-id="a16ee-130">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-130">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a7f67-133">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-133">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tables
     fullName: tables
     langs:
@@ -171,9 +172,9 @@ items:
           - 'excel!Excel.Interfaces.TableCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#visibility:member'
     summary: |-
-      <span data-ttu-id="a16ee-131">工作表的可见性。</span><span class="sxs-lookup"><span data-stu-id="a16ee-131">The Visibility of the worksheet.</span></span>
+      <span data-ttu-id="a7f67-134">工作表的可见性。</span><span class="sxs-lookup"><span data-stu-id="a7f67-134">The Visibility of the worksheet.</span></span>
 
-      <span data-ttu-id="a16ee-132">\[[API 集： ExcelApi 1.1 用于读取可见性; 1.2 用于设置。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="a16ee-132">\[ [API set: ExcelApi 1.1 for reading visibility; 1.2 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="a16ee-133">\]</span><span class="sxs-lookup"><span data-stu-id="a16ee-133"></span></span>
+      <span data-ttu-id="a7f67-135">\[[API 集： ExcelApi 1.1 用于读取可见性; 1.2 用于设置。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="a7f67-135">\[ [API set: ExcelApi 1.1 for reading visibility; 1.2 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="a7f67-136">\]</span><span class="sxs-lookup"><span data-stu-id="a7f67-136"></span></span>
     name: visibility
     fullName: visibility
     langs:
