--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangebordercollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangebordercollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionData:interface'
-    summary: <span data-ttu-id="20b67-101">描述通过调用 "conditionalRangeBorderCollection （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="20b67-101">An interface describing the data returned by calling "conditionalRangeBorderCollection.toJSON()".</span></span>
+    summary: <span data-ttu-id="59c88-101">描述通过调用返回的数据的接口`conditionalRangeBorderCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="59c88-101">An interface describing the data returned by calling `conditionalRangeBorderCollection.toJSON()`</span></span><!-- --><span data-ttu-id="59c88-102">.</span><span class="sxs-lookup"><span data-stu-id="59c88-102"></span></span>
     name: Excel.Interfaces.ConditionalRangeBorderCollectionData
     fullName: Excel.Interfaces.ConditionalRangeBorderCollectionData
     langs:
