--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangeformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangeformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="e5085-101">将条件格式区域的字体、填充、边框和其他属性封装在一起的格式对象。</span><span class="sxs-lookup"><span data-stu-id="e5085-101">A format object encapsulating the conditional formats range's font, fill, borders, and other properties.</span></span>
+      <span data-ttu-id="a44e2-101">将条件格式区域的字体、填充、边框和其他属性封装在一起的格式对象。</span><span class="sxs-lookup"><span data-stu-id="a44e2-101">A format object encapsulating the conditional formats range's font, fill, borders, and other properties.</span></span>
 
-      <span data-ttu-id="e5085-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5085-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a44e2-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a44e2-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ConditionalRangeFormatLoadOptions
     fullName: Excel.Interfaces.ConditionalRangeFormatLoadOptions
     langs:
@@ -18,6 +18,7 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#font:member'
       - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#numberFormat:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#$all:member'
+    summary: '<span data-ttu-id="a44e2-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="a44e2-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="a44e2-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="a44e2-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="a44e2-105">).</span><span class="sxs-lookup"><span data-stu-id="a44e2-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -30,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#borders:member'
     summary: |-
-      <span data-ttu-id="e5085-103">应用于整体条件格式范围的 border 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="e5085-103">Collection of border objects that apply to the overall conditional format range.</span></span>
+      <span data-ttu-id="a44e2-106">应用于整体条件格式范围的 border 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="a44e2-106">Collection of border objects that apply to the overall conditional format range.</span></span>
 
-      <span data-ttu-id="e5085-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5085-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a44e2-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a44e2-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: borders
     fullName: borders
     langs:
@@ -45,9 +46,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#fill:member'
     summary: |-
-      <span data-ttu-id="e5085-105">返回在整体条件格式范围上定义的 fill 对象。</span><span class="sxs-lookup"><span data-stu-id="e5085-105">Returns the fill object defined on the overall conditional format range.</span></span>
+      <span data-ttu-id="a44e2-108">返回在整体条件格式范围上定义的 fill 对象。</span><span class="sxs-lookup"><span data-stu-id="a44e2-108">Returns the fill object defined on the overall conditional format range.</span></span>
 
-      <span data-ttu-id="e5085-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5085-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a44e2-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a44e2-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: fill
     fullName: fill
     langs:
@@ -60,9 +61,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFillLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="e5085-107">返回在整体条件格式区域上定义的 font 对象。</span><span class="sxs-lookup"><span data-stu-id="e5085-107">Returns the font object defined on the overall conditional format range.</span></span>
+      <span data-ttu-id="a44e2-110">返回在整体条件格式区域上定义的 font 对象。</span><span class="sxs-lookup"><span data-stu-id="a44e2-110">Returns the font object defined on the overall conditional format range.</span></span>
 
-      <span data-ttu-id="e5085-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5085-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a44e2-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a44e2-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: font
     fullName: font
     langs:
@@ -75,9 +76,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions#numberFormat:member'
     summary: |-
-      <span data-ttu-id="e5085-109">表示给定范围的 Excel 数字格式代码。</span><span class="sxs-lookup"><span data-stu-id="e5085-109">Represents Excel's number format code for the given range.</span></span> <span data-ttu-id="e5085-110">如果传入 null，则清除。</span><span class="sxs-lookup"><span data-stu-id="e5085-110">Cleared if null is passed in.</span></span>
+      <span data-ttu-id="a44e2-112">表示给定范围的 Excel 数字格式代码。</span><span class="sxs-lookup"><span data-stu-id="a44e2-112">Represents Excel's number format code for the given range.</span></span> <span data-ttu-id="a44e2-113">如果传入 null，则清除。</span><span class="sxs-lookup"><span data-stu-id="a44e2-113">Cleared if null is passed in.</span></span>
 
-      <span data-ttu-id="e5085-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5085-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a44e2-114">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a44e2-114">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: numberFormat
     fullName: numberFormat
     langs:
