--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivotitemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivotitemcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.PivotItemCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="9e387-101">代表与其父透视字段相关的所有 PivotItems 的集合。</span><span class="sxs-lookup"><span data-stu-id="9e387-101">Represents a collection of all the PivotItems related to their parent PivotField.</span></span>
+      <span data-ttu-id="3ef9e-101">代表与其父透视字段相关的所有 PivotItems 的集合。</span><span class="sxs-lookup"><span data-stu-id="3ef9e-101">Represents a collection of all the PivotItems related to their parent PivotField.</span></span>
 
-      <span data-ttu-id="9e387-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e387-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="3ef9e-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef9e-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.PivotItemCollectionLoadOptions
     fullName: Excel.Interfaces.PivotItemCollectionLoadOptions
     langs:
@@ -18,6 +18,7 @@ items:
       - 'excel!Excel.Interfaces.PivotItemCollectionLoadOptions#name:member'
       - 'excel!Excel.Interfaces.PivotItemCollectionLoadOptions#visible:member'
   - uid: 'excel!Excel.Interfaces.PivotItemCollectionLoadOptions#$all:member'
+    summary: '<span data-ttu-id="3ef9e-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="3ef9e-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="3ef9e-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="3ef9e-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="3ef9e-105">).</span><span class="sxs-lookup"><span data-stu-id="3ef9e-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -30,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="9e387-103">对于集合中的每一项： PivotItem 的 Id。</span><span class="sxs-lookup"><span data-stu-id="9e387-103">For EACH ITEM in the collection: Id of the PivotItem.</span></span>
+      <span data-ttu-id="3ef9e-106">对于集合中的每一项： PivotItem 的 Id。</span><span class="sxs-lookup"><span data-stu-id="3ef9e-106">For EACH ITEM in the collection: Id of the PivotItem.</span></span>
 
-      <span data-ttu-id="9e387-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e387-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="3ef9e-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef9e-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -45,9 +46,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemCollectionLoadOptions#isExpanded:member'
     summary: |-
-      <span data-ttu-id="9e387-105">对于集合中的每个项目：确定是否展开项目以显示子项目，或者是否折叠和子项被隐藏。</span><span class="sxs-lookup"><span data-stu-id="9e387-105">For EACH ITEM in the collection: Determines whether the item is expanded to show child items or if it's collapsed and child items are hidden.</span></span>
+      <span data-ttu-id="3ef9e-108">对于集合中的每个项目：确定是否展开项目以显示子项目，或者是否折叠和子项被隐藏。</span><span class="sxs-lookup"><span data-stu-id="3ef9e-108">For EACH ITEM in the collection: Determines whether the item is expanded to show child items or if it's collapsed and child items are hidden.</span></span>
 
-      <span data-ttu-id="9e387-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e387-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="3ef9e-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef9e-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: isExpanded
     fullName: isExpanded
     langs:
@@ -60,9 +61,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemCollectionLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="9e387-107">对于集合中的每一项： PivotItem 的名称。</span><span class="sxs-lookup"><span data-stu-id="9e387-107">For EACH ITEM in the collection: Name of the PivotItem.</span></span>
+      <span data-ttu-id="3ef9e-110">对于集合中的每一项： PivotItem 的名称。</span><span class="sxs-lookup"><span data-stu-id="3ef9e-110">For EACH ITEM in the collection: Name of the PivotItem.</span></span>
 
-      <span data-ttu-id="9e387-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e387-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="3ef9e-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef9e-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -75,9 +76,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemCollectionLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="9e387-109">对于集合中的每一项：确定 PivotItem 是否可见。</span><span class="sxs-lookup"><span data-stu-id="9e387-109">For EACH ITEM in the collection: Determines whether the PivotItem is visible or not.</span></span>
+      <span data-ttu-id="3ef9e-112">对于集合中的每一项：确定 PivotItem 是否可见。</span><span class="sxs-lookup"><span data-stu-id="3ef9e-112">For EACH ITEM in the collection: Determines whether the PivotItem is visible or not.</span></span>
 
-      <span data-ttu-id="9e387-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e387-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="3ef9e-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef9e-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
