--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.tablecolumnloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.tablecolumnloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="6bfa7-101">代表表格中的一列。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-101">Represents a column in a table.</span></span>
+      <span data-ttu-id="50c03-101">代表表格中的一列。</span><span class="sxs-lookup"><span data-stu-id="50c03-101">Represents a column in a table.</span></span>
 
-      <span data-ttu-id="6bfa7-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6bfa7-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50c03-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50c03-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.TableColumnLoadOptions
     fullName: Excel.Interfaces.TableColumnLoadOptions
     langs:
@@ -19,6 +19,7 @@ items:
       - 'excel!Excel.Interfaces.TableColumnLoadOptions#name:member'
       - 'excel!Excel.Interfaces.TableColumnLoadOptions#values:member'
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#$all:member'
+    summary: '<span data-ttu-id="50c03-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="50c03-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="50c03-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="50c03-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="50c03-105">).</span><span class="sxs-lookup"><span data-stu-id="50c03-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -31,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#filter:member'
     summary: |-
-      <span data-ttu-id="6bfa7-103">检索应用于列的筛选器。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-103">Retrieve the filter applied to the column.</span></span>
+      <span data-ttu-id="50c03-106">检索应用于列的筛选器。</span><span class="sxs-lookup"><span data-stu-id="50c03-106">Retrieve the filter applied to the column.</span></span>
 
-      <span data-ttu-id="6bfa7-104">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6bfa7-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50c03-107">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50c03-107">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: filter
     fullName: filter
     langs:
@@ -46,9 +47,9 @@ items:
           - 'excel!Excel.Interfaces.FilterLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="6bfa7-105">返回标识表内的列的唯一键。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-105">Returns a unique key that identifies the column within the table.</span></span> <span data-ttu-id="6bfa7-106">只读。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-106">Read-only.</span></span>
+      <span data-ttu-id="50c03-108">返回标识表内的列的唯一键。</span><span class="sxs-lookup"><span data-stu-id="50c03-108">Returns a unique key that identifies the column within the table.</span></span> <span data-ttu-id="50c03-109">只读。</span><span class="sxs-lookup"><span data-stu-id="50c03-109">Read-only.</span></span>
 
-      <span data-ttu-id="6bfa7-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6bfa7-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50c03-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50c03-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -61,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#index:member'
     summary: |-
-      <span data-ttu-id="6bfa7-108">返回表的列集合内列的索引编号。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-108">Returns the index number of the column within the columns collection of the table.</span></span> <span data-ttu-id="6bfa7-109">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-109">Zero-indexed.</span></span> <span data-ttu-id="6bfa7-110">只读。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-110">Read-only.</span></span>
+      <span data-ttu-id="50c03-111">返回表的列集合内列的索引编号。</span><span class="sxs-lookup"><span data-stu-id="50c03-111">Returns the index number of the column within the columns collection of the table.</span></span> <span data-ttu-id="50c03-112">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="50c03-112">Zero-indexed.</span></span> <span data-ttu-id="50c03-113">只读。</span><span class="sxs-lookup"><span data-stu-id="50c03-113">Read-only.</span></span>
 
-      <span data-ttu-id="6bfa7-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6bfa7-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50c03-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50c03-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: index
     fullName: index
     langs:
@@ -76,9 +77,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="6bfa7-112">表示表列的名称。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-112">Represents the name of the table column.</span></span>
+      <span data-ttu-id="50c03-115">表示表列的名称。</span><span class="sxs-lookup"><span data-stu-id="50c03-115">Represents the name of the table column.</span></span>
 
-      <span data-ttu-id="6bfa7-113">\[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="6bfa7-113">\[ [API set: ExcelApi 1.1 for getting the name; 1.4 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="6bfa7-114">\]</span><span class="sxs-lookup"><span data-stu-id="6bfa7-114"></span></span>
+      <span data-ttu-id="50c03-116">\[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="50c03-116">\[ [API set: ExcelApi 1.1 for getting the name; 1.4 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="50c03-117">\]</span><span class="sxs-lookup"><span data-stu-id="50c03-117"></span></span>
     name: name
     fullName: name
     langs:
@@ -91,9 +92,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#values:member'
     summary: |-
-      <span data-ttu-id="6bfa7-115">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-115">Represents the raw values of the specified range.</span></span> <span data-ttu-id="6bfa7-116">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-116">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="6bfa7-117">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="6bfa7-117">Cells that contain an error will return the error string.</span></span>
+      <span data-ttu-id="50c03-118">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="50c03-118">Represents the raw values of the specified range.</span></span> <span data-ttu-id="50c03-119">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="50c03-119">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="50c03-120">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="50c03-120">Cells that contain an error will return the error string.</span></span>
 
-      <span data-ttu-id="6bfa7-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6bfa7-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50c03-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50c03-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: values
     fullName: values
     langs:
