--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.workbookprotectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.workbookprotectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorkbookProtectionData:interface'
-    summary: <span data-ttu-id="3acd2-101">描述通过调用 "workbookProtection （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="3acd2-101">An interface describing the data returned by calling "workbookProtection.toJSON()".</span></span>
+    summary: <span data-ttu-id="ad80f-101">描述通过调用返回的数据的接口`workbookProtection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="ad80f-101">An interface describing the data returned by calling `workbookProtection.toJSON()`</span></span><!-- --><span data-ttu-id="ad80f-102">.</span><span class="sxs-lookup"><span data-stu-id="ad80f-102"></span></span>
     name: Excel.Interfaces.WorkbookProtectionData
     fullName: Excel.Interfaces.WorkbookProtectionData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.WorkbookProtectionData#protected:member'
   - uid: 'excel!Excel.Interfaces.WorkbookProtectionData#protected:member'
     summary: |-
-      <span data-ttu-id="3acd2-102">指示工作簿是否受保护。</span><span class="sxs-lookup"><span data-stu-id="3acd2-102">Indicates if the workbook is protected.</span></span> <span data-ttu-id="3acd2-103">只读。</span><span class="sxs-lookup"><span data-stu-id="3acd2-103">Read-Only.</span></span>
+      <span data-ttu-id="ad80f-103">指示工作簿是否受保护。</span><span class="sxs-lookup"><span data-stu-id="ad80f-103">Indicates if the workbook is protected.</span></span> <span data-ttu-id="ad80f-104">只读。</span><span class="sxs-lookup"><span data-stu-id="ad80f-104">Read-Only.</span></span>
 
-      <span data-ttu-id="3acd2-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3acd2-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ad80f-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ad80f-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: protected
     fullName: protected
     langs:
