--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.worksheetprotectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.worksheetprotectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorksheetProtectionData:interface'
-    summary: <span data-ttu-id="bb7c2-101">描述通过调用 "worksheetProtection （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="bb7c2-101">An interface describing the data returned by calling "worksheetProtection.toJSON()".</span></span>
+    summary: <span data-ttu-id="519a3-101">描述通过调用返回的数据的接口`worksheetProtection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="519a3-101">An interface describing the data returned by calling `worksheetProtection.toJSON()`</span></span><!-- --><span data-ttu-id="519a3-102">.</span><span class="sxs-lookup"><span data-stu-id="519a3-102"></span></span>
     name: Excel.Interfaces.WorksheetProtectionData
     fullName: Excel.Interfaces.WorksheetProtectionData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.WorksheetProtectionData#protected:member'
   - uid: 'excel!Excel.Interfaces.WorksheetProtectionData#options:member'
     summary: |-
-      <span data-ttu-id="bb7c2-102">工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="bb7c2-102">Sheet protection options.</span></span> <span data-ttu-id="bb7c2-103">只读。</span><span class="sxs-lookup"><span data-stu-id="bb7c2-103">Read-only.</span></span>
+      <span data-ttu-id="519a3-103">工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="519a3-103">Sheet protection options.</span></span> <span data-ttu-id="519a3-104">只读。</span><span class="sxs-lookup"><span data-stu-id="519a3-104">Read-only.</span></span>
 
-      <span data-ttu-id="bb7c2-104">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb7c2-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="519a3-105">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="519a3-105">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: options
     fullName: options
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.WorksheetProtectionOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorksheetProtectionData#protected:member'
     summary: |-
-      <span data-ttu-id="bb7c2-105">表示该工作表是否受保护。</span><span class="sxs-lookup"><span data-stu-id="bb7c2-105">Indicates if the worksheet is protected.</span></span> <span data-ttu-id="bb7c2-106">只读。</span><span class="sxs-lookup"><span data-stu-id="bb7c2-106">Read-only.</span></span>
+      <span data-ttu-id="519a3-106">表示该工作表是否受保护。</span><span class="sxs-lookup"><span data-stu-id="519a3-106">Indicates if the worksheet is protected.</span></span> <span data-ttu-id="519a3-107">只读。</span><span class="sxs-lookup"><span data-stu-id="519a3-107">Read-only.</span></span>
 
-      <span data-ttu-id="bb7c2-107">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb7c2-107">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="519a3-108">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="519a3-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: protected
     fullName: protected
     langs:
