--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.charterrorbarsformat.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.charterrorbarsformat.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ChartErrorBarsFormat:class'
     summary: |-
-      <span data-ttu-id="fa720-101">封装图表误差线的格式属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-101">Encapsulates the format properties for chart error bars.</span></span>
+      <span data-ttu-id="8c6ad-101">封装图表误差线的格式属性。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-101">Encapsulates the format properties for chart error bars.</span></span>
 
-      <span data-ttu-id="fa720-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa720-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8c6ad-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8c6ad-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ChartErrorBarsFormat
     fullName: Excel.ChartErrorBarsFormat
     langs:
@@ -23,7 +23,7 @@ items:
       - 'excel!Excel.ChartErrorBarsFormat#set:member(2)'
       - 'excel!Excel.ChartErrorBarsFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartErrorBarsFormat#context:member'
-    summary: <span data-ttu-id="fa720-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="fa720-103">The request context associated with the object.</span></span> <span data-ttu-id="fa720-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="fa720-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: <span data-ttu-id="8c6ad-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-103">The request context associated with the object.</span></span> <span data-ttu-id="8c6ad-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-104">This connects the add-in's process to the Office host application's process.</span></span>
     name: context
     fullName: context
     langs:
@@ -36,9 +36,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartErrorBarsFormat#line:member'
     summary: |-
-      <span data-ttu-id="fa720-105">表示图表线条格式。</span><span class="sxs-lookup"><span data-stu-id="fa720-105">Represents the chart line formatting.</span></span>
+      <span data-ttu-id="8c6ad-105">表示图表线条格式。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-105">Represents the chart line formatting.</span></span>
 
-      <span data-ttu-id="fa720-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa720-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8c6ad-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8c6ad-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: line
     fullName: line
     langs:
@@ -50,33 +50,25 @@ items:
         type:
           - 'excel!Excel.ChartLineFormat:class'
   - uid: 'excel!Excel.ChartErrorBarsFormat#load:member(1)'
-    summary: <span data-ttu-id="fa720-107">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="fa720-108">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="fa720-108">You must call "context.sync()" before reading the properties.</span></span>
-    remarks: |-
-      <span data-ttu-id="fa720-109">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="fa720-109">In addition to this signature, this method has the following signatures:</span></span>
-
-      <span data-ttu-id="fa720-110">`load(option?: string | string[]): Excel.ChartErrorBarsFormat`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-110">`load(option?: string | string[]): Excel.ChartErrorBarsFormat` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
-
-      <span data-ttu-id="fa720-111">`load(option?: { select?: string; expand?: string; }): Excel.ChartErrorBarsFormat`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-111">`load(option?: { select?: string; expand?: string; }): Excel.ChartErrorBarsFormat` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
-
-      <span data-ttu-id="fa720-112">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartErrorBarsFormat`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="fa720-112">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartErrorBarsFormat` - Only available on collection types.</span></span> <span data-ttu-id="fa720-113">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="fa720-113">It is similar to the preceding signature.</span></span> <span data-ttu-id="fa720-114">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="fa720-114">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="fa720-115">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="fa720-115">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="fa720-116">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="fa720-116">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
-    name: load(option)
-    fullName: load(option)
+    summary: <span data-ttu-id="8c6ad-107">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8c6ad-108">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-108">You must call `context.sync()` before reading the properties.</span></span>
+    name: load(options)
+    fullName: load(options)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(option?: Excel.Interfaces.ChartErrorBarsFormatLoadOptions): Excel.ChartErrorBarsFormat;'
+      content: 'load(options?: Excel.Interfaces.ChartErrorBarsFormatLoadOptions): Excel.ChartErrorBarsFormat;'
       return:
         type:
           - 'excel!Excel.ChartErrorBarsFormat:class'
         description: ''
       parameters:
-        - id: option
-          description: ''
+        - id: options
+          description: <span data-ttu-id="8c6ad-109">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-109">Provides options for which properties of the object to load.</span></span>
           type:
             - 'excel!Excel.Interfaces.ChartErrorBarsFormatLoadOptions:interface'
   - uid: 'excel!Excel.ChartErrorBarsFormat#load:member(2)'
-    summary: <span data-ttu-id="fa720-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="fa720-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="fa720-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: <span data-ttu-id="8c6ad-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8c6ad-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-111">You must call `context.sync()` before reading the properties.</span></span>
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -90,31 +82,39 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="fa720-119">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-119">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: <span data-ttu-id="8c6ad-112">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-112">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartErrorBarsFormat#load:member(3)'
-    summary: <span data-ttu-id="fa720-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="fa720-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="fa720-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: <span data-ttu-id="8c6ad-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8c6ad-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-114">You must call `context.sync()` before reading the properties.</span></span>
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.ChartErrorBarsFormat;'
+      content: |-
+        load(propertyNamesAndPaths?: {
+                    select?: string;
+                    expand?: string;
+                }): Excel.ChartErrorBarsFormat;
       return:
         type:
           - 'excel!Excel.ChartErrorBarsFormat:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="fa720-122">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-122">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '<span data-ttu-id="8c6ad-115">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-115">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
           type:
-            - '{ select?: string; expand?: string; }'
+            - |-
+              {
+                          select?: string;
+                          expand?: string;
+                      }
   - uid: 'excel!Excel.ChartErrorBarsFormat#set:member(1)'
-    summary: '<span data-ttu-id="fa720-123">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-123">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="fa720-124">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="fa720-124">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: '<span data-ttu-id="8c6ad-116">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-116">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="8c6ad-117">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-117">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
     remarks: |-
-      <span data-ttu-id="fa720-125">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="fa720-125">This method has the following additional signature:</span></span>
+      <span data-ttu-id="8c6ad-118">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="8c6ad-118">This method has the following additional signature:</span></span>
 
       `set(properties: Excel.ChartErrorBarsFormat): void`
     name: 'set(properties, options)'
@@ -130,15 +130,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="fa720-126">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-126">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: <span data-ttu-id="8c6ad-119">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-119">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
           type:
             - 'excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="fa720-127">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="fa720-127">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: <span data-ttu-id="8c6ad-120">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-120">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
           type:
             - 'excel!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartErrorBarsFormat#set:member(2)'
-    summary: '<span data-ttu-id="fa720-128">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="fa720-128">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: '<span data-ttu-id="8c6ad-121">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-121">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -156,7 +156,7 @@ items:
           type:
             - 'excel!Excel.ChartErrorBarsFormat:class'
   - uid: 'excel!Excel.ChartErrorBarsFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="fa720-129">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="fa720-129">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="fa720-130">.</span><span class="sxs-lookup"><span data-stu-id="fa720-130"></span></span> <span data-ttu-id="fa720-131">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="fa720-131"></span></span><!-- --><span data-ttu-id="fa720-132">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartErrorBarsFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartErrorBarsFormatData`</span><span class="sxs-lookup"><span data-stu-id="fa720-132">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartErrorBarsFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartErrorBarsFormatData`</span></span><!-- --><span data-ttu-id="fa720-133">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="fa720-133">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: '<span data-ttu-id="8c6ad-122">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="8c6ad-122">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="8c6ad-123">.</span><span class="sxs-lookup"><span data-stu-id="8c6ad-123"></span></span> <span data-ttu-id="8c6ad-124">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="8c6ad-124"></span></span><!-- --><span data-ttu-id="8c6ad-125">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartErrorBarsFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartErrorBarsFormatData`</span><span class="sxs-lookup"><span data-stu-id="8c6ad-125">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartErrorBarsFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartErrorBarsFormatData`</span></span><!-- --><span data-ttu-id="8c6ad-126">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="8c6ad-126">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
     name: toJSON()
     fullName: toJSON()
     langs:
