--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pagebreakloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pagebreakloadoptions.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PageBreakLoadOptions:interface'
-    summary: '<span data-ttu-id="34592-101">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="34592-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '<span data-ttu-id="d632c-101">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d632c-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
     name: Excel.Interfaces.PageBreakLoadOptions
     fullName: Excel.Interfaces.PageBreakLoadOptions
     langs:
@@ -13,6 +13,7 @@ items:
       - 'excel!Excel.Interfaces.PageBreakLoadOptions#columnIndex:member'
       - 'excel!Excel.Interfaces.PageBreakLoadOptions#rowIndex:member'
   - uid: 'excel!Excel.Interfaces.PageBreakLoadOptions#$all:member'
+    summary: '<span data-ttu-id="d632c-102">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="d632c-102">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="d632c-103">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="d632c-103">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="d632c-104">).</span><span class="sxs-lookup"><span data-stu-id="d632c-104"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -25,9 +26,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PageBreakLoadOptions#columnIndex:member'
     summary: |-
-      <span data-ttu-id="34592-102">表示分页符的列索引</span><span class="sxs-lookup"><span data-stu-id="34592-102">Represents the column index for the page break</span></span>
+      <span data-ttu-id="d632c-105">表示分页符的列索引</span><span class="sxs-lookup"><span data-stu-id="d632c-105">Represents the column index for the page break</span></span>
 
-      <span data-ttu-id="34592-103">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="34592-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d632c-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d632c-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: columnIndex
     fullName: columnIndex
     langs:
@@ -40,9 +41,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PageBreakLoadOptions#rowIndex:member'
     summary: |-
-      <span data-ttu-id="34592-104">表示分页符的行索引</span><span class="sxs-lookup"><span data-stu-id="34592-104">Represents the row index for the page break</span></span>
+      <span data-ttu-id="d632c-107">表示分页符的行索引</span><span class="sxs-lookup"><span data-stu-id="d632c-107">Represents the row index for the page break</span></span>
 
-      <span data-ttu-id="34592-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="34592-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d632c-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d632c-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: rowIndex
     fullName: rowIndex
     langs:
