--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangecollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="83130-101">一个用于更新 RangeCollection 对象上的数据的接口，可用于 "rangeCollection （</span><span class="sxs-lookup"><span data-stu-id="83130-101">An interface for updating data on the RangeCollection object, for use in "rangeCollection.set(</span></span><!-- --><span data-ttu-id="83130-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="83130-102"></span></span><!-- --><span data-ttu-id="83130-103">)".</span><span class="sxs-lookup"><span data-stu-id="83130-103"></span></span>'
+    summary: '<span data-ttu-id="a71dd-101">一个用于更新 RangeCollection 对象上的数据的接口，可用于`rangeCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="a71dd-101">An interface for updating data on the RangeCollection object, for use in `rangeCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="a71dd-102">.</span><span class="sxs-lookup"><span data-stu-id="a71dd-102"></span></span>'
     name: Excel.Interfaces.RangeCollectionUpdateData
     fullName: Excel.Interfaces.RangeCollectionUpdateData
     langs:
