--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapegrouploadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapegrouploadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ShapeGroupLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="30d25-101">代表工作表中的形状组。</span><span class="sxs-lookup"><span data-stu-id="30d25-101">Represents a shape group inside a worksheet.</span></span> <span data-ttu-id="30d25-102">若要获取相应的 Shape 对象，请使用`ShapeGroup.shape`</span><span class="sxs-lookup"><span data-stu-id="30d25-102">To get the corresponding Shape object, use `ShapeGroup.shape`</span></span><!-- --><span data-ttu-id="30d25-103">.</span><span class="sxs-lookup"><span data-stu-id="30d25-103"></span></span>
+      <span data-ttu-id="2d73b-101">代表工作表中的形状组。</span><span class="sxs-lookup"><span data-stu-id="2d73b-101">Represents a shape group inside a worksheet.</span></span> <span data-ttu-id="2d73b-102">若要获取相应的 Shape 对象，请使用`ShapeGroup.shape`</span><span class="sxs-lookup"><span data-stu-id="2d73b-102">To get the corresponding Shape object, use `ShapeGroup.shape`</span></span><!-- --><span data-ttu-id="2d73b-103">.</span><span class="sxs-lookup"><span data-stu-id="2d73b-103"></span></span>
 
-      <span data-ttu-id="30d25-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="30d25-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2d73b-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d73b-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ShapeGroupLoadOptions
     fullName: Excel.Interfaces.ShapeGroupLoadOptions
     langs:
@@ -16,6 +16,7 @@ items:
       - 'excel!Excel.Interfaces.ShapeGroupLoadOptions#id:member'
       - 'excel!Excel.Interfaces.ShapeGroupLoadOptions#shape:member'
   - uid: 'excel!Excel.Interfaces.ShapeGroupLoadOptions#$all:member'
+    summary: '<span data-ttu-id="2d73b-105">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="2d73b-105">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="2d73b-106">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="2d73b-106">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="2d73b-107">).</span><span class="sxs-lookup"><span data-stu-id="2d73b-107"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeGroupLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="30d25-105">表示形状标识符。</span><span class="sxs-lookup"><span data-stu-id="30d25-105">Represents the shape identifier.</span></span> <span data-ttu-id="30d25-106">只读。</span><span class="sxs-lookup"><span data-stu-id="30d25-106">Read-only.</span></span>
+      <span data-ttu-id="2d73b-108">表示形状标识符。</span><span class="sxs-lookup"><span data-stu-id="2d73b-108">Represents the shape identifier.</span></span> <span data-ttu-id="2d73b-109">只读。</span><span class="sxs-lookup"><span data-stu-id="2d73b-109">Read-only.</span></span>
 
-      <span data-ttu-id="30d25-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="30d25-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2d73b-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d73b-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -43,9 +44,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeGroupLoadOptions#shape:member'
     summary: |-
-      <span data-ttu-id="30d25-108">返回与组关联的 Shape 对象。</span><span class="sxs-lookup"><span data-stu-id="30d25-108">Returns the Shape object associated with the group.</span></span>
+      <span data-ttu-id="2d73b-111">返回与组关联的 Shape 对象。</span><span class="sxs-lookup"><span data-stu-id="2d73b-111">Returns the Shape object associated with the group.</span></span>
 
-      <span data-ttu-id="30d25-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="30d25-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2d73b-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d73b-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: shape
     fullName: shape
     langs:
