--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.tablecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.tablecollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="5688d-101">一个用于更新 TableCollection 对象上的数据的接口，可用于 "tableCollection （</span><span class="sxs-lookup"><span data-stu-id="5688d-101">An interface for updating data on the TableCollection object, for use in "tableCollection.set(</span></span><!-- --><span data-ttu-id="5688d-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="5688d-102"></span></span><!-- --><span data-ttu-id="5688d-103">)".</span><span class="sxs-lookup"><span data-stu-id="5688d-103"></span></span>'
+    summary: '<span data-ttu-id="1fa4a-101">一个用于更新 TableCollection 对象上的数据的接口，可用于`tableCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="1fa4a-101">An interface for updating data on the TableCollection object, for use in `tableCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="1fa4a-102">.</span><span class="sxs-lookup"><span data-stu-id="1fa4a-102"></span></span>'
     name: Excel.Interfaces.TableCollectionUpdateData
     fullName: Excel.Interfaces.TableCollectionUpdateData
     langs:
