--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.tablescopedcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.tablescopedcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableScopedCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="05d75-101">一个用于更新 TableScopedCollection 对象上的数据的接口，可用于 "tableScopedCollection （</span><span class="sxs-lookup"><span data-stu-id="05d75-101">An interface for updating data on the TableScopedCollection object, for use in "tableScopedCollection.set(</span></span><!-- --><span data-ttu-id="05d75-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="05d75-102"></span></span><!-- --><span data-ttu-id="05d75-103">)".</span><span class="sxs-lookup"><span data-stu-id="05d75-103"></span></span>'
+    summary: '<span data-ttu-id="55fac-101">一个用于更新 TableScopedCollection 对象上的数据的接口，可用于`tableScopedCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="55fac-101">An interface for updating data on the TableScopedCollection object, for use in `tableScopedCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="55fac-102">.</span><span class="sxs-lookup"><span data-stu-id="55fac-102"></span></span>'
     name: Excel.Interfaces.TableScopedCollectionUpdateData
     fullName: Excel.Interfaces.TableScopedCollectionUpdateData
     langs:
