--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.textframedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.textframedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TextFrameData:interface'
-    summary: <span data-ttu-id="147dc-101">描述通过调用 "textFrame （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="147dc-101">An interface describing the data returned by calling "textFrame.toJSON()".</span></span>
+    summary: <span data-ttu-id="40f39-101">描述通过调用返回的数据的接口`textFrame.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="40f39-101">An interface describing the data returned by calling `textFrame.toJSON()`</span></span><!-- --><span data-ttu-id="40f39-102">.</span><span class="sxs-lookup"><span data-stu-id="40f39-102"></span></span>
     name: Excel.Interfaces.TextFrameData
     fullName: Excel.Interfaces.TextFrameData
     langs:
@@ -23,9 +23,9 @@ items:
       - 'excel!Excel.Interfaces.TextFrameData#verticalOverflow:member'
   - uid: 'excel!Excel.Interfaces.TextFrameData#autoSizeSetting:member'
     summary: |-
-      <span data-ttu-id="147dc-102">获取或设置文本框的自动调整大小设置。</span><span class="sxs-lookup"><span data-stu-id="147dc-102">Gets or sets the automatic sizing settings for the text frame.</span></span> <span data-ttu-id="147dc-103">可以将文本框设置为自动调整文本大小以适应文本框，或自动调整文本框大小以适应文本，或者不使用自动调整大小设置。</span><span class="sxs-lookup"><span data-stu-id="147dc-103">A text frame can be set to automatically fit the text to the text frame, to automatically fit the text frame to the text, or not perform any automatic sizing.</span></span>
+      <span data-ttu-id="40f39-103">获取或设置文本框的自动调整大小设置。</span><span class="sxs-lookup"><span data-stu-id="40f39-103">Gets or sets the automatic sizing settings for the text frame.</span></span> <span data-ttu-id="40f39-104">可以将文本框设置为自动调整文本大小以适应文本框，或自动调整文本框大小以适应文本，或者不使用自动调整大小设置。</span><span class="sxs-lookup"><span data-stu-id="40f39-104">A text frame can be set to automatically fit the text to the text frame, to automatically fit the text frame to the text, or not perform any automatic sizing.</span></span>
 
-      <span data-ttu-id="147dc-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: autoSizeSetting
     fullName: autoSizeSetting
     langs:
@@ -38,9 +38,9 @@ items:
           - 'excel!Excel.Interfaces.TextFrameData#autoSizeSetting~0:complex'
   - uid: 'excel!Excel.Interfaces.TextFrameData#bottomMargin:member'
     summary: |-
-      <span data-ttu-id="147dc-105">表示文本框的下边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="147dc-105">Represents the bottom margin, in points, of the text frame.</span></span>
+      <span data-ttu-id="40f39-106">表示文本框的下边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="40f39-106">Represents the bottom margin, in points, of the text frame.</span></span>
 
-      <span data-ttu-id="147dc-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: bottomMargin
     fullName: bottomMargin
     langs:
@@ -53,9 +53,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.TextFrameData#hasText:member'
     summary: |-
-      <span data-ttu-id="147dc-107">指定文本框是否包含文本。</span><span class="sxs-lookup"><span data-stu-id="147dc-107">Specifies whether the text frame contains text.</span></span>
+      <span data-ttu-id="40f39-108">指定文本框是否包含文本。</span><span class="sxs-lookup"><span data-stu-id="40f39-108">Specifies whether the text frame contains text.</span></span>
 
-      <span data-ttu-id="147dc-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: hasText
     fullName: hasText
     langs:
@@ -68,9 +68,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameData#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="147dc-109">表示文本框的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="147dc-109">Represents the horizontal alignment of the text frame.</span></span> <span data-ttu-id="147dc-110">有关详细信息，请参阅 Excel.ShapeTextHorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="147dc-110">See Excel.ShapeTextHorizontalAlignment for details.</span></span>
+      <span data-ttu-id="40f39-110">表示文本框的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="40f39-110">Represents the horizontal alignment of the text frame.</span></span> <span data-ttu-id="40f39-111">有关详细信息，请参阅 Excel.ShapeTextHorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="40f39-111">See Excel.ShapeTextHorizontalAlignment for details.</span></span>
 
-      <span data-ttu-id="147dc-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -83,9 +83,9 @@ items:
           - 'excel!Excel.Interfaces.TextFrameData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.TextFrameData#horizontalOverflow:member'
     summary: |-
-      <span data-ttu-id="147dc-112">表示文本框的水平溢出行为。</span><span class="sxs-lookup"><span data-stu-id="147dc-112">Represents the horizontal overflow behavior of the text frame.</span></span> <span data-ttu-id="147dc-113">有关详细信息，请参阅 Excel.ShapeTextHorizontalOverflow。</span><span class="sxs-lookup"><span data-stu-id="147dc-113">See Excel.ShapeTextHorizontalOverflow for details.</span></span>
+      <span data-ttu-id="40f39-113">表示文本框的水平溢出行为。</span><span class="sxs-lookup"><span data-stu-id="40f39-113">Represents the horizontal overflow behavior of the text frame.</span></span> <span data-ttu-id="40f39-114">有关详细信息，请参阅 Excel.ShapeTextHorizontalOverflow。</span><span class="sxs-lookup"><span data-stu-id="40f39-114">See Excel.ShapeTextHorizontalOverflow for details.</span></span>
 
-      <span data-ttu-id="147dc-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-115">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: horizontalOverflow
     fullName: horizontalOverflow
     langs:
@@ -98,9 +98,9 @@ items:
           - 'excel!Excel.Interfaces.TextFrameData#horizontalOverflow~0:complex'
   - uid: 'excel!Excel.Interfaces.TextFrameData#leftMargin:member'
     summary: |-
-      <span data-ttu-id="147dc-115">表示文本框的左边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="147dc-115">Represents the left margin, in points, of the text frame.</span></span>
+      <span data-ttu-id="40f39-116">表示文本框的左边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="40f39-116">Represents the left margin, in points, of the text frame.</span></span>
 
-      <span data-ttu-id="147dc-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: leftMargin
     fullName: leftMargin
     langs:
@@ -113,9 +113,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.TextFrameData#orientation:member'
     summary: |-
-      <span data-ttu-id="147dc-117">表示文本框的文本方向。</span><span class="sxs-lookup"><span data-stu-id="147dc-117">Represents the text orientation of the text frame.</span></span> <span data-ttu-id="147dc-118">有关详细信息，请参阅 Excel.ShapeTextOrientation。</span><span class="sxs-lookup"><span data-stu-id="147dc-118">See Excel.ShapeTextOrientation for details.</span></span>
+      <span data-ttu-id="40f39-118">表示文本框的文本方向。</span><span class="sxs-lookup"><span data-stu-id="40f39-118">Represents the text orientation of the text frame.</span></span> <span data-ttu-id="40f39-119">有关详细信息，请参阅 Excel.ShapeTextOrientation。</span><span class="sxs-lookup"><span data-stu-id="40f39-119">See Excel.ShapeTextOrientation for details.</span></span>
 
-      <span data-ttu-id="147dc-119">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-119">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: orientation
     fullName: orientation
     langs:
@@ -128,9 +128,9 @@ items:
           - 'excel!Excel.Interfaces.TextFrameData#orientation~0:complex'
   - uid: 'excel!Excel.Interfaces.TextFrameData#readingOrder:member'
     summary: |-
-      <span data-ttu-id="147dc-120">表示文本框从左到右或从右到左的读取顺序。</span><span class="sxs-lookup"><span data-stu-id="147dc-120">Represents the reading order of the text frame, either left-to-right or right-to-left.</span></span> <span data-ttu-id="147dc-121">有关详细信息，请参阅 Excel.ShapeTextReadingOrder。</span><span class="sxs-lookup"><span data-stu-id="147dc-121">See Excel.ShapeTextReadingOrder for details.</span></span>
+      <span data-ttu-id="40f39-121">表示文本框从左到右或从右到左的读取顺序。</span><span class="sxs-lookup"><span data-stu-id="40f39-121">Represents the reading order of the text frame, either left-to-right or right-to-left.</span></span> <span data-ttu-id="40f39-122">有关详细信息，请参阅 Excel.ShapeTextReadingOrder。</span><span class="sxs-lookup"><span data-stu-id="40f39-122">See Excel.ShapeTextReadingOrder for details.</span></span>
 
-      <span data-ttu-id="147dc-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-123">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-123">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: readingOrder
     fullName: readingOrder
     langs:
@@ -143,9 +143,9 @@ items:
           - 'excel!Excel.Interfaces.TextFrameData#readingOrder~0:complex'
   - uid: 'excel!Excel.Interfaces.TextFrameData#rightMargin:member'
     summary: |-
-      <span data-ttu-id="147dc-123">表示文本框的右边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="147dc-123">Represents the right margin, in points, of the text frame.</span></span>
+      <span data-ttu-id="40f39-124">表示文本框的右边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="40f39-124">Represents the right margin, in points, of the text frame.</span></span>
 
-      <span data-ttu-id="147dc-124">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-125">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-125">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: rightMargin
     fullName: rightMargin
     langs:
@@ -158,9 +158,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.TextFrameData#topMargin:member'
     summary: |-
-      <span data-ttu-id="147dc-125">表示文本框的上边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="147dc-125">Represents the top margin, in points, of the text frame.</span></span>
+      <span data-ttu-id="40f39-126">表示文本框的上边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="40f39-126">Represents the top margin, in points, of the text frame.</span></span>
 
-      <span data-ttu-id="147dc-126">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-127">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-127">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: topMargin
     fullName: topMargin
     langs:
@@ -173,9 +173,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.TextFrameData#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="147dc-127">表示文本框的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="147dc-127">Represents the vertical alignment of the text frame.</span></span> <span data-ttu-id="147dc-128">有关详细信息，请参阅 Excel.ShapeTextVerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="147dc-128">See Excel.ShapeTextVerticalAlignment for details.</span></span>
+      <span data-ttu-id="40f39-128">表示文本框的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="40f39-128">Represents the vertical alignment of the text frame.</span></span> <span data-ttu-id="40f39-129">有关详细信息，请参阅 Excel.ShapeTextVerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="40f39-129">See Excel.ShapeTextVerticalAlignment for details.</span></span>
 
-      <span data-ttu-id="147dc-129">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-129">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -188,9 +188,9 @@ items:
           - 'excel!Excel.Interfaces.TextFrameData#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.TextFrameData#verticalOverflow:member'
     summary: |-
-      <span data-ttu-id="147dc-130">表示文本框的垂直溢出行为。</span><span class="sxs-lookup"><span data-stu-id="147dc-130">Represents the vertical overflow behavior of the text frame.</span></span> <span data-ttu-id="147dc-131">有关详细信息，请参阅 Excel.ShapeTextVerticalOverflow。</span><span class="sxs-lookup"><span data-stu-id="147dc-131">See Excel.ShapeTextVerticalOverflow for details.</span></span>
+      <span data-ttu-id="40f39-131">表示文本框的垂直溢出行为。</span><span class="sxs-lookup"><span data-stu-id="40f39-131">Represents the vertical overflow behavior of the text frame.</span></span> <span data-ttu-id="40f39-132">有关详细信息，请参阅 Excel.ShapeTextVerticalOverflow。</span><span class="sxs-lookup"><span data-stu-id="40f39-132">See Excel.ShapeTextVerticalOverflow for details.</span></span>
 
-      <span data-ttu-id="147dc-132">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="147dc-132">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="40f39-133">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40f39-133">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: verticalOverflow
     fullName: verticalOverflow
     langs:
