--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.custompropertycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.custompropertycollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="3dc34-101">包含[CustomProperty](xref:word!Word.CustomProperty:class)对象的集合。</span><span class="sxs-lookup"><span data-stu-id="3dc34-101">Contains the collection of [Word.CustomProperty](xref:word!Word.CustomProperty:class) objects.</span></span>
+      <span data-ttu-id="1e208-101">包含[CustomProperty](xref:word!Word.CustomProperty:class)对象的集合。</span><span class="sxs-lookup"><span data-stu-id="1e208-101">Contains the collection of [Word.CustomProperty](xref:word!Word.CustomProperty:class) objects.</span></span>
 
-      <span data-ttu-id="3dc34-102">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3dc34-102">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1e208-102">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e208-102">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: Word.Interfaces.CustomPropertyCollectionLoadOptions
     fullName: Word.Interfaces.CustomPropertyCollectionLoadOptions
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#key:member'
     summary: |-
-      <span data-ttu-id="3dc34-103">对于集合中的每一项：获取自定义属性的键。</span><span class="sxs-lookup"><span data-stu-id="3dc34-103">For EACH ITEM in the collection: Gets the key of the custom property.</span></span> <span data-ttu-id="3dc34-104">只读。</span><span class="sxs-lookup"><span data-stu-id="3dc34-104">Read only.</span></span>
+      <span data-ttu-id="1e208-103">对于集合中的每一项：获取自定义属性的键。</span><span class="sxs-lookup"><span data-stu-id="1e208-103">For EACH ITEM in the collection: Gets the key of the custom property.</span></span> <span data-ttu-id="1e208-104">只读。</span><span class="sxs-lookup"><span data-stu-id="1e208-104">Read only.</span></span>
 
-      <span data-ttu-id="3dc34-105">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3dc34-105">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1e208-105">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e208-105">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: key
     fullName: key
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="3dc34-106">对于集合中的每一项：获取自定义属性的值类型。</span><span class="sxs-lookup"><span data-stu-id="3dc34-106">For EACH ITEM in the collection: Gets the value type of the custom property.</span></span> <span data-ttu-id="3dc34-107">可能的值包括： String、Number、Date、Boolean。</span><span class="sxs-lookup"><span data-stu-id="3dc34-107">Possible values are: String, Number, Date, Boolean.</span></span> <span data-ttu-id="3dc34-108">只读。</span><span class="sxs-lookup"><span data-stu-id="3dc34-108">Read only.</span></span>
+      <span data-ttu-id="1e208-106">对于集合中的每一项：获取自定义属性的值类型。</span><span class="sxs-lookup"><span data-stu-id="1e208-106">For EACH ITEM in the collection: Gets the value type of the custom property.</span></span> <span data-ttu-id="1e208-107">可能的值包括： String、Number、Date、Boolean。</span><span class="sxs-lookup"><span data-stu-id="1e208-107">Possible values are: String, Number, Date, Boolean.</span></span> <span data-ttu-id="1e208-108">只读。</span><span class="sxs-lookup"><span data-stu-id="1e208-108">Read only.</span></span>
 
-      <span data-ttu-id="3dc34-109">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3dc34-109">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1e208-109">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e208-109">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: type
     fullName: type
     langs:
@@ -59,9 +59,9 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.CustomPropertyCollectionLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="3dc34-110">对于集合中的每一项：获取或设置自定义属性的值。</span><span class="sxs-lookup"><span data-stu-id="3dc34-110">For EACH ITEM in the collection: Gets or sets the value of the custom property.</span></span> <span data-ttu-id="3dc34-111">请注意，即使在 web 上的 Word 和 .docx 文件格式允许这些属性很长，Word 的桌面版本也会将字符串值截断为 255 16 位字符（可能会通过分解代理项对来创建无效的 unicode）。</span><span class="sxs-lookup"><span data-stu-id="3dc34-111">Note that even though Word on the web and the docx file format allow these properties to be arbitrarily long, the desktop version of Word will truncate string values to 255 16-bit chars (possibly creating invalid unicode by breaking up a surrogate pair).</span></span>
+      <span data-ttu-id="1e208-110">对于集合中的每一项：获取或设置自定义属性的值。</span><span class="sxs-lookup"><span data-stu-id="1e208-110">For EACH ITEM in the collection: Gets or sets the value of the custom property.</span></span> <span data-ttu-id="1e208-111">请注意，即使 Word for the web 和 .docx 文件格式允许这些属性任意长，Word 的桌面版本也会将字符串值截断为 255 16 位字符（可能通过分解代理项对来创建无效的 unicode）。</span><span class="sxs-lookup"><span data-stu-id="1e208-111">Note that even though Word for the web and the docx file format allow these properties to be arbitrarily long, the desktop version of Word will truncate string values to 255 16-bit chars (possibly creating invalid unicode by breaking up a surrogate pair).</span></span>
 
-      <span data-ttu-id="3dc34-112">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3dc34-112">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1e208-112">\[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e208-112">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: value
     fullName: value
     langs:
